--- a/data/localization/af-FR.json
+++ b/data/localization/af-FR.json
@@ -1,310 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "Redémarrer",
-    "Pause": "Mettre en pause",
-    "Play": "Jouer",
-    "Save State": "Enregistrer l'état",
-    "Load State": "Ouvrir un état",
-    "Control Settings": "Paramètres des contrôles",
-    "Cheats": "Triches",
-    "Cache Manager": "Gestionnaire du cache",
-    "Export Save File": "Exporter vers une sauvegarde",
-    "Import Save File": "Importer une sauvegarde",
-    "Netplay": "Jouer en ligne",
-    "Mute": "Désactiver le son",
-    "Unmute": "Réactiver le son",
-    "Settings": "Paramètres",
-    "Enter Fullscreen": "Passer en mode plein écran",
-    "Exit Fullscreen": "Quitter le mode plein écran",
-    "Context Menu": "Menu contextuel",
-    "Reset": "Réinitialiser",
-    "Clear": "Effacer",
-    "Close": "Fermer",
-    "QUICK SAVE STATE": "ENREGISTREMENT RAPIDE DE L'ÉTAT",
-    "QUICK LOAD STATE": "CHARGEMENT RAPIDE DE L'ÉTAT",
-    "CHANGE STATE SLOT": "CHANGER L'EMPLACEMENT DE L'ÉTAT",
-    "FAST FORWARD": "AVANCE RAPIDE",
-    "Player": "Joueur",
-    "Connected Gamepad": "Manette de jeu connectée",
-    "Gamepad": "Manette de jeu",
-    "Keyboard": "Clavier",
-    "Set": "Définir",
-    "Add Cheat": "Ajouter une triche",
-    "Note that some cheats require a restart to disable": "Notez que certaines triches nécessitent un redémarrage pour être désactivées",
-    "Create a Room": "Créer un salon",
-    "Rooms": "Salons",
-    "Start Game": "Démarrer le jeu",
-    "Click to resume Emulator": "Cliquez pour reprendre avec l'émulateur",
-    "Drop save state here to load": "Déposez un état enregistré ici pour le charger",
-    "Loading...": "Chargement en cours...",
-    "Download Game Core": "Téléchargement du noyau pour le jeu en cours...",
-    "Outdated graphics driver": "Pilote graphique obsolète",
-    "Decompress Game Core": "Décompression du noyau pour le jeu en cours...",
-    "Download Game Data": "Téléchargement des données du jeu en cours...",
-    "Decompress Game Data": "Décompression des données du jeu en cours...",
-    "Shaders": "Shaders",
-    "Disabled": "Désactivé",
-    "2xScaleHQ": "2xScaleHQ",
-    "4xScaleHQ": "4xScaleHQ",
-    "CRT easymode": "CRT easymode",
-    "CRT aperture": "CRT aperture",
-    "CRT geom": "CRT geom",
-    "CRT mattias": "CRT mattias",
-    "FPS": "FPS",
-    "show": "Afficher",
-    "hide": "Masquer",
-    "Fast Forward Ratio": "Vitesse de l'avance rapide",
-    "Fast Forward": "Avance rapide",
-    "Enabled": "Activé",
-    "Save State Slot": "Emplacement de l'état",
-    "Save State Location": "Stockage des états",
-    "Download": "Télécharger",
-    "Keep in Browser": "Dans le navigateur",
-    "Auto": "Auto",
-    "NTSC": "NTSC",
-    "PAL": "PAL",
-    "Dendy": "Dendy",
-    "8:7 PAR": "8:7 PAR",
-    "4:3": "4:3",
-    "Low": "Basse",
-    "High": "Élevée",
-    "Very High": "Très élevée",
-    "None": "Aucun",
+    "i18n": {
+        "restart": "Redémarrer",
+        "play": "Jouer",
+        "pause": "Pause",
+        "played": "Joué",
+        "volume": "Volume",
+        "mute": "Muet (F9)",
+        "unmute": "Rétablir le son (F9)",
+        "enterFullscreen": "Entrer en plein écran",
+        "exitFullscreen": "Quitter le plein écran",
+        "settings": "Paramètres",
+        "saveState": "Enregistrer l'état (Maj + F2)",
+        "loadState": "État de charge (Maj + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "Démarrer l'enregistrement d'écran",
+        "netplay": "Netplay",
+        "gamepad": "Paramètres de contrôle",
+        "cheat": "Tricheurs",
+        "menuBack": "Revenir au menu précédent",
+        "normal": "Normale",
+        "all": "Tous",
+        "reset": "Réinitialiser",
+        "disabled": "Désactivé",
+        "enabled": "Activé",
+        "playNow": "Jouer maintenant"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": " Ombrage",
+            "options": {
+                "disabled": "Désactivé",
+                "2xScaleHQ.glslp": "2xScaleHQ",
+                "4xScaleHQ.glslp": "4xScaleHQ",
+                "crt-easymode.glslp": "CRT mode facile",
+                "crt-aperture.glslp": "Ouverture CRT",
+                "crt-geom.glslp": "CRT geom",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": " Manette de jeu virtuelle",
+            "options": {
+                "disabled": "Désactivé",
+                "enabled": "Activé"
+            },
+            "default": "enabled"
+        }
+    },
+    "Control Settings": "Paramètres de contrôle",
     "Player 1": "Joueur 1",
     "Player 2": "Joueur 2",
-    "Both": "Les deux",
-    "SAVED STATE TO SLOT": "ÉTAT ENREGISTRÉ VERS L'EMPLACEMENT",
-    "LOADED STATE FROM SLOT": "ÉTAT CHARGÉ À PARTIR DE L'EMPLACEMENT",
-    "SET SAVE STATE SLOT TO": "DÉFINIR L'EMPLACEMENT DE L'ÉTAT ENREGISTRÉ À",
-    "Network Error": "Erreur réseau",
+    "Player 3": "Joueur 3",
+    "Player 4": "Joueur 4",
+    "Update": "Mettre à jour",
+    "Reset": "Réinitialiser",
+    "Clear": "Effacer",
+    "Cancel": "Annuler",
+    "Close": "Fermer",
+    "Empty": "Vide",
+    "Loading": "Chargement",
     "Submit": "Soumettre",
     "Description": "Description",
     "Code": "Code",
     "Add Cheat Code": "Ajouter un code de triche",
-    "Leave Room": "Sortir du salon",
-    "Password": "Mot de passe",
-    "Password (optional)": "Mot de passe (facultatif)",
-    "Max Players": "Nombre maximal de joueurs",
-    "Room Name": "Nom du salon",
-    "Join": "Rejoindre",
-    "Player Name": "Nom du joueur",
-    "Set Player Name": "Définir le nom du joueur",
-    "Left Handed Mode": "Mode gaucher",
-    "Virtual Gamepad": "Manette de jeu virtuelle",
-    "Disk": "Disque",
-    "Press Keyboard": "Appuyez sur le clavier",
+    "OK": "D'accord",
+    "Add Cheat": "Ajouter une triche",
+    "Cache Manager": "Gestionnaire de cache",
+    "Press keyboard or gamepad": "Appuyez sur le clavier ou la manette de jeu",
+    "Gamepad": "Manette de jeu",
+    "Keyboard": "Clavier",
+    "Set": "Définir",
+    "QUICK SAVE STATE": "ÉTAT DE SAUVEGARDE RAPIDE",
+    "QUICK LOAD STATE": "ÉTAT DE CHARGEMENT RAPIDE",
+    "CHANGE STATE SLOT": "CHANGER L'EMPLACEMENT D'ETAT",
     "INSERT COIN": "INSÉRER UNE PIÈCE",
-    "Remove": "Retirer",
-    "SAVE LOADED FROM BROWSER": "SAUVEGARDE CHARGÉE À PARTIR DU NAVIGATEUR",
-    "SAVE SAVED TO BROWSER": "SAUVEGARDE ENREGISTRÉE DANS LE NAVIGATEUR",
-    "Join the discord": "Rejoindre le serveur Discord",
-    "View on GitHub": "Afficher sur GitHub",
-    "Failed to start game": "Échec au démarrage du jeu",
-    "Download Game BIOS": "Téléchargement du BIOS du jeu...",
-    "Decompress Game BIOS": "Décompression du BIOS du jeu...",
-    "Download Game Parent": "Téléchargement du jeu parent...",
-    "Decompress Game Parent": "Décompression du jeu parent...",
-    "Download Game Patch": "Téléchargement du correctif du jeu...",
-    "Decompress Game Patch": "Décompression du correctif du jeu...",
-    "Download Game State": "Téléchargement de l'état enregistré...",
-    "Check console": "Vérifier la console",
-    "Error for site owner": "Erreur pour le propriétaire du site",
-    "EmulatorJS": "EmulatorJS",
-    "Clear All": "Effacer tout",
+    "Press escape (esc) to clear": "Appuyez sur Échap (esc) pour effacer",
+    "Netplay": "Netplay",
+    "Rooms": "Chambres",
+    "Players": "Joueurs",
+    "Player": "Joueur",
+    "Room Name": "Nom de la pièce",
+    "Password": "Mot de passe",
+    "Name": "Nom",
+    "Quit Room": "Quitter le salon",
+    "Create a Room": "Créer une pièce",
+    "Set Player Name": "Définir le nom du joueur",
+    "Player Name": "Nom du joueur",
+    "Password (optional)": "Mot de passe (facultatif)",
+    "Select": "Sélectionner",
+    "Start": "Démarrer",
+    "Menu": "Menu",
+    "Decompress Game Core": "Décompresser le noyau du jeu",
+    "Decompress Game Data": "Décompresser les données du jeu",
+    "Decompress Game Patch": "Décompresser le patch du jeu",
+    "Download Game Data": "Télécharger les données du jeu",
+    "Download Game Core": "Télécharger le noyau du jeu",
+    "Network Error": "Erreur réseau",
+    "Default": "Par défaut",
+    "default": "par défaut",
+    "Save State Location": "Enregistrer l'emplacement de l'état",
+    "Save State Slot": "Enregistrer l'emplacement de l'état",
+    "Color Palette": " Palette de couleurs",
+    "No Sprite Limit": "Pas de limite de sprites",
+    "Enabled": "Activé",
+    "Disabled": "Désactivé",
+    "enabled": "activé",
+    "disabled": "désactivé",
+    "Low": "Bas",
+    "High": "Élevé",
+    "Very High": "Très élevé",
+    "4 Players Support": " Prise en charge de 4 joueurs",
+    "Turbo Enable": "Activation turbo",
+    "None": "Aucun",
+    "Both": "Les deux",
+    "Region": "Région",
+    "SuperFX Overclock": "SuperFX Overclock",
+    "Sound Quality": "Qualité sonore",
+    "GB Colorization": "GB Colorisation",
+    "auto": "auto",
+    "internal": "interne",
+    "Internal Palette": "Palette interne",
+    "GBC - Blue": "GBC Bleu",
+    "GBC - Brown": "GBC Marron",
+    "GBC - Dark Blue": "GBC Bleu Foncé",
+    "GBC - Dark Brown": "GBC Marron Foncé",
+    "GBC - Dark Green": "GBC vert foncé",
+    "GBC - Grayscale": " Niveaux de gris GBC",
+    "GBC - Green": "GBC Vert",
+    "GBC - Inverted": "GBC Inversé",
+    "GBC - Orange": "GBC Orange",
+    "GBC - Red": "GBC Rouge",
+    "GBC - Pastel Mix": "mélange de pastels GBC",
+    "GBC - Yellow": "GBC Jaune",
+    "Frameskip": "Frameskip",
+    "Solar sensor level": "Niveau du capteur solaire",
+    "Enable Turbo Buttons": "Activer les boutons turbo",
+    "Turbo Delay in frames": "Turbo Delay dans les images",
+    "Auto": "Auto",
+    "Aspect Ratio (Need to refresh page)": "Aspect Ratio (Besoin d'actualiser la page)",
+    "16:9 Resolution": "Résolution 16:9",
+    "4:3 Resolution": " Résolution 4:3",
+    "Player 1 Pak": "Pack joueur 1",
+    "Player 2 Pak": "Pack joueur 2",
+    "Player 3 Pak": "Pack de 3 joueurs",
+    "Player 4 Pak": "Pack de 4 joueurs",
+    "none": "aucun",
+    "memory": "mémoire",
+    "rumble": "grondement",
+    "Screen layout": "Disposition de l'écran",
+    "right/left": "droite/gauche",
+    "left/right": "gauche/droite",
+    "bottom/top": "bas/haut",
+    "top/bottom": "haut/bas",
+    "top only": "haut seulement",
+    "bottom only": "en bas uniquement",
+    "quick switch": "commutateur rapide",
+    "hybrid/bottom": "hybride/fond",
+    "hybrid/top": "hybride/haut",
+    "Screen Rotation": " Rotation de l'écran",
+    "CPU speed": "Vitesse du processeur",
+    "Sound output": "Sortie sonore",
+    "mono": "mono",
+    "stereo": "stéréo",
+    "OFF": "OFF",
+    "ON": "ON",
+    "Fast Blitter": "Blitter rapide",
+    "Bios": "Bios",
+    "Enable second memory card": "Activer la deuxième carte mémoire",
+    "Pad 1 Type": "Type de tampon 1",
+    "Pad 2 Type": "Type de plaquette 2",
+    "Pad 3 Type": "Type de tampon 3",
+    "Pad 4 Type": "Type de tampon 4",
+    "standard": "norme",
+    "analog": "analogique",
+    "negcon": "negcon",
+    "Enable Vibration": "Activer les vibrations",
+    "Enable interlacing mode(s)": "Activer le(s) mode(s) d'entrelacement",
+    "Enhanced resolution (slow)": "Résolution améliorée (lente)",
+    "Enhanced resolution speed hack": "Hack de vitesse de résolution améliorée",
+    "Aspect ratio": "Rapport d'aspect",
+    "CPU overclock": " Surcadençage du processeur",
+    "Force Neo Geo mode": "Forcer le mode Neo Geo",
+    "Diagnostic Input": "Entrée de diagnostic",
+    "download": "télécharger",
+    "keep in browser": "garder dans le navigateur",
+    "Webassembly support is not detected in this browser": "La prise en charge de Webassembly n'est pas détectée dans ce navigateur",
+    "Please upgrade your browser to the latest version": "Veuillez mettre à niveau votre navigateur vers la dernière version",
+    "Missing mame config": "Configuration Mame manquante",
+    "Stop Screen Recording": "Arrêter l'enregistrement d'écran",
+    "Start Screen Recording": "Démarrer l'enregistrement d'écran",
     "Take Screenshot": "Prendre une capture d'écran",
-    "Start screen recording": "Démarrer l'enregistrement de l'écran",
-    "Stop screen recording": "Arrêter l'enregistrement de l'écran",
     "Quick Save": "Enregistrement rapide",
-    "Quick Load": "Chargement rapide",
-    "REWIND": "REMBOBINER",
-    "Rewind Enabled (requires restart)": "Rembobinage activé (nécessite un redémarrage)",
-    "Rewind Granularity": "Granularité du rembobinage",
-    "Slow Motion Ratio": "Vitesse du ralenti",
-    "Slow Motion": "Au ralenti",
-    "Home": "Accueil",
-    "EmulatorJS License": "Licence EmulatorJS",
-    "RetroArch License": "Licence RetroArch",
-    "This project is powered by": "Ce projet est propulsé par",
-    "View the RetroArch license here": "Consulter la licence de RetroArch",
-    "SLOW MOTION": "AU RALENTI",
-    "A": "A",
-    "B": "B",
-    "SELECT": "SELECT",
-    "START": "START",
-    "UP": "HAUT",
-    "DOWN": "BAS",
-    "LEFT": "GAUCHE",
-    "RIGHT": "DROITE",
-    "X": "X",
-    "Y": "Y",
-    "L": "L",
-    "R": "R",
-    "Z": "Z",
-    "STICK UP": "STICK HAUT",
-    "STICK DOWN": "STICK BAS",
-    "STICK LEFT": "STICK GAUCHE",
-    "STICK RIGHT": "STICK DROITE",
-    "C-PAD UP": "C-PAD HAUT",
-    "C-PAD DOWN": "C-PAD BAS",
-    "C-PAD LEFT": "C-PAD GAUCHE",
-    "C-PAD RIGHT": "C-PAD DROITE",
-    "MICROPHONE": "MICROPHONE",
-    "BUTTON 1 / START": "BOUTON 1 / START",
-    "BUTTON 2": "BOUTON 2",
-    "BUTTON": "BOUTON",
-    "LEFT D-PAD UP": "D-PAD GAUCHE HAUT",
-    "LEFT D-PAD DOWN": "D-PAD GAUCHE BAS",
-    "LEFT D-PAD LEFT": "D-PAD GAUCHE GAUCHE",
-    "LEFT D-PAD RIGHT": "D-PAD GAUCHE DROITE",
-    "RIGHT D-PAD UP": "D-PAD DROIT HAUT",
-    "RIGHT D-PAD DOWN": "D-PAD DROIT BAS",
-    "RIGHT D-PAD LEFT": "D-PAD DROIT GAUCHE",
-    "RIGHT D-PAD RIGHT": "D-PAD DROIT DROITE",
-    "C": "C",
-    "MODE": "MODE",
-    "FIRE": "FIRE",
-    "RESET": "RESET",
-    "LEFT DIFFICULTY A": "LEFT DIFFICULTY A",
-    "LEFT DIFFICULTY B": "LEFT DIFFICULTY B",
-    "RIGHT DIFFICULTY A": "RIGHT DIFFICULTY A",
-    "RIGHT DIFFICULTY B": "RIGHT DIFFICULTY A",
-    "COLOR": "COLOR",
-    "B/W": "B/W",
-    "PAUSE": "PAUSE",
-    "OPTION": "OPTION",
-    "OPTION 1": "OPTION 1",
-    "OPTION 2": "OPTION 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "STICK G HAUT",
-    "L STICK DOWN": "STICK G BAS",
-    "L STICK LEFT": "STICK G GAUCHE",
-    "L STICK RIGHT": "STICK G DROITE",
-    "R STICK UP": "STICK D HAUT",
-    "R STICK DOWN": "STICK D BAS",
-    "R STICK LEFT": "STICK D GAUCHE",
-    "R STICK RIGHT": "STICK D DROITE",
-    "Start": "START",
-    "Select": "SELECT",
-    "Fast": "FAST",
-    "Slow": "SLOW",
-    "a": "A",
-    "b": "B",
-    "c": "C",
-    "d": "D",
-    "e": "E",
-    "f": "F",
-    "g": "G",
-    "h": "H",
-    "i": "I",
-    "j": "J",
-    "k": "K",
-    "l": "L",
-    "m": "M",
-    "n": "N",
-    "o": "O",
-    "p": "P",
-    "q": "Q",
-    "r": "R",
-    "s": "S",
-    "t": "T",
-    "u": "U",
-    "v": "V",
-    "w": "W",
-    "x": "X",
-    "y": "Y",
-    "z": "Z",
-    "enter": "Entrée",
-    "escape": "Échap",
-    "space": "Espace",
-    "tab": "Tab.",
-    "backspace": "Retour arrière",
-    "delete": "Suppr.",
-    "arrowup": "Flèche vers le haut",
-    "arrowdown": "Flèche vers le bas",
-    "arrowleft": "Flèche vers la gauche",
-    "arrowright": "Flèche vers la droite",
-    "f1": "F1",
-    "f2": "F2",
-    "f3": "F3",
-    "f4": "F4",
-    "f5": "F5",
-    "f6": "F6",
-    "f7": "F7",
-    "f8": "F8",
-    "f9": "F9",
-    "f10": "F10",
-    "f11": "F11",
-    "f12": "F12",
-    "shift": "Maj",
-    "control": "Ctrl",
-    "alt": "Alt",
-    "meta": "Méta",
-    "capslock": "Verr. maj",
-    "insert": "Insér.",
-    "home": "Début",
-    "end": "Fin",
-    "pageup": "Pg préc",
-    "pagedown": "Pg suiv",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "STICK_GAUCHE_X",
-    "LEFT_STICK_Y": "STICK_GAUCHE_Y",
-    "RIGHT_STICK_X": "STICK_DROIT_X",
-    "RIGHT_STICK_Y": "STICK_DROIT_Y",
-    "LEFT_TRIGGER": "GACHETTE_GAUCHE",
-    "RIGHT_TRIGGER": "GACHETTE_DROITE",
-    "A_BUTTON": "BOUTON_A",
-    "B_BUTTON": "BOUTON_B",
-    "X_BUTTON": "BOUTON_X",
-    "Y_BUTTON": "BOUTON_Y",
-    "START_BUTTON": "BOUTON_START",
-    "SELECT_BUTTON": "BOUTON_SELECT",
-    "L1_BUTTON": "BOUTON_L1",
-    "R1_BUTTON": "BOUTON_R1",
-    "L2_BUTTON": "BOUTON_L2",
-    "R2_BUTTON": "BOUTON_R2",
-    "LEFT_THUMB_BUTTON": "BOUTON_L3",
-    "RIGHT_THUMB_BUTTON": "BOUTON_R3",
-    "DPAD_UP": "DPAD_HAUT",
-    "DPAD_DOWN": "DPAD_BAS",
-    "DPAD_LEFT": "DPAD_GAUCHE",
-    "DPAD_RIGHT": "DPAD_DROITE"
+    "Quick Load": "Chargement rapide"
 }
