--- a/data/localization/el-GR.json
+++ b/data/localization/el-GR.json
@@ -1,301 +1,199 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "Επανεκκίνηση",
-    "Pause": "Παύση",
-    "Play": "Παίζω",
-    "Save State": "Save State",
-    "Load State": "Κατάσταση φόρτωσης",
-    "Control Settings": "Ρυθμίσεις ελέγχου",
-    "Cheats": "Απατεώνες",
-    "Cache Manager": "Διαχειριστής προσωρινής μνήμης",
-    "Export Save File": "Εξαγωγή Αποθήκευση αρχείου",
-    "Import Save File": "Εισαγωγή Αποθήκευση αρχείου",
-    "Netplay": "Netplay",
-    "Mute": "Βουβός",
-    "Unmute": "Κατάργηση σίγασης",
-    "Settings": "Ρυθμίσεις",
-    "Enter Fullscreen": "Εισέλθετε σε πλήρη οθόνη",
-    "Exit Fullscreen": "Έξοδος από την πλήρη οθόνη",
-    "Reset": "Επαναφορά",
-    "Clear": "Σαφή",
-    "Close": "Κλείσε",
-    "QUICK SAVE STATE": "ΓΡΗΓΟΡΗ ΑΠΟΘΗΚΕΥΣΗ ΚΑΤΑΣΤΑΣΗΣ",
-    "QUICK LOAD STATE": "ΚΑΤΑΣΤΑΣΗ ΓΡΗΓΟΡΗΣ ΦΟΡΤΩΣΗΣ",
-    "CHANGE STATE SLOT": "ΑΛΛΑΓΗ ΚΑΤΑΣΤΑΣΗΣ ΣΛΟΤ",
-    "FAST FORWARD": "ΓΡΗΓΟΡΗ ΠΡΟΩΘΗΣΗ",
-    "Player": "Παίχτης",
-    "Connected Gamepad": "Συνδεδεμένο Gamepad",
-    "Gamepad": "Gamepad",
-    "Keyboard": "Πληκτρολόγιο",
-    "Set": "Σειρά",
-    "Add Cheat": "Προσθήκη εξαπάτησης",
-    "Create a Room": "Δημιουργήστε ένα δωμάτιο",
-    "Rooms": "Δωμάτια",
-    "Start Game": "Ξεκίνα το παιχνίδι",
-    "Loading...": "Φόρτωση...",
-    "Download Game Core": "Κατεβάστε το Game Core",
-    "Decompress Game Core": "Αποσυμπιέστε τον πυρήνα του παιχνιδιού",
-    "Download Game Data": "Λήψη δεδομένων παιχνιδιού",
-    "Decompress Game Data": "Αποσυμπίεση δεδομένων παιχνιδιού",
-    "Shaders": "Shaders",
-    "Disabled": "άτομα με ειδικές ανάγκες",
-    "2xScaleHQ": "2xScaleHQ",
-    "4xScaleHQ": "4xScaleHQ",
-    "CRT easymode": "CRT easymode",
-    "CRT aperture": "Διάφραγμα CRT",
-    "CRT geom": "CRT γεωμ",
-    "CRT mattias": "CRT mattias",
-    "FPS": "FPS",
-    "show": "προβολή",
-    "hide": "κρύβω",
-    "Fast Forward Ratio": "Αναλογία Fast Forward",
-    "Fast Forward": "Γρήγορη προώθηση",
-    "Enabled": "Ενεργοποιημένο",
-    "Save State Slot": "Save State Slot",
-    "Save State Location": "Αποθήκευση τοποθεσίας κατάστασης",
-    "Download": "Κατεβάστε",
-    "Keep in Browser": "Διατήρηση στο πρόγραμμα περιήγησης",
-    "Auto": "Αυτο",
-    "NTSC": "NTSC",
-    "PAL": "ΦΙΛΑΡΑΚΟΣ",
-    "Dendy": "Dendy",
-    "8:7 PAR": "8:7 ΠΑΡ",
-    "4:3": "4:3",
-    "Low": "Χαμηλός",
-    "High": "Υψηλός",
-    "Very High": "Πολύ ψηλά",
-    "None": "Κανένας",
+    "i18n": {
+        "restart": "Επανεκκίνηση",
+        "play": "Συνέχισε",
+        "pause": "Παύση",
+        "played": "Παίχτηκε",
+        "volume": "Ένταση",
+        "mute": "Σίγαση (F9)",
+        "unmute": "Αναίρεση σίγασης (F9)",
+        "enterFullscreen": "Πλήρης οθόνη",
+        "exitFullscreen": "Κλείσιμο πλήρους οθόνης",
+        "settings": "Ρυθμίσεις",
+        "saveState": "Αποθήκευση (Shift + F2)",
+        "loadState": "Φόρτωση (Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "Εγγραφή οθόνης",
+        "netplay": "Online παιχνίδι",
+        "gamepad": "Ρυθμίσεις χειρισμού",
+        "cheat": "Κωδικοί παιχνιδιού",
+        "menuBack": "Πίσω στο μενού",
+        "normal": "Κανονικό",
+        "all": "Όλα",
+        "reset": "Επαναφορά",
+        "disabled": "Απενεργοποιημένο",
+        "enabled": "Ενεργοποιημένο",
+        "playNow": "Παίξε τώρα"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": "Σκίαση",
+            "options": {
+                "disabled": "Απενεργοποιημένο",
+                "2xScaleHQ.glslp": "Κλίμακα x2",
+                "4xScaleHQ.glslp": "Κλίμακα x4",
+                "crt-easymode.glslp": "Λειτουργία οθόνης παλαιού τύπου απλή",
+                "crt-aperture.glslp": "Λειτουργία οθόνης παλαιού τύπου με άνοιγμα",
+                "crt-geom.glslp": "Λειτουργία οθόνης παλαιού τύπου με θόλο",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": "Εικονικός μοχλός",
+            "options": {
+                "disabled": "Απενεργοποιημένο",
+                "enabled": "Ενεργοποιημένο"
+            },
+            "default": "enabled"
+        }
+    },
+    "Control Settings": "Ρυθμίσεις χειρισμού",
     "Player 1": "Παίκτης 1",
     "Player 2": "Παίκτης 2",
-    "Both": "Και τα δυο",
-    "SAVED STATE TO SLOT": "ΣΩΘΗΚΕ ΠΟΛΙΤΕΙΑ ΣΤΟ ΣΛΟΤ",
-    "LOADED STATE FROM SLOT": "ΦΟΡΤΩΜΕΝΗ ΚΑΤΑΣΤΑΣΗ ΑΠΟ ΣΛΟΤ",
-    "SET SAVE STATE SLOT TO": "ΡΥΘΜΙΣΗ ΑΠΟΘΗΚΕΥΣΗ ΚΑΤΑΣΤΑΣΗΣ ΣΤΟΙΧΗΣ ΣΤΟ",
-    "Network Error": "Σφάλμα δικτύου",
-    "Submit": "υποβάλλουν",
+    "Player 3": "Παίκτης 3",
+    "Player 4": "Παίκτης 4",
+    "Update": "Ενημέρωση",
+    "Reset": "Επαναφορά",
+    "Clear": "Καθαρισμός",
+    "Cancel": "Ακύρωση",
+    "Close": "Κλείσιμο",
+    "Empty": "Άδειασμα",
+    "Loading": "Φορτώνει",
+    "Submit": "Υποβολή",
     "Description": "Περιγραφή",
-    "Code": "Κώδικας",
-    "Add Cheat Code": "Προσθέστε τον κωδικό εξαπάτησης",
-    "Leave Room": "Έξοδος από το δωμάτιο",
-    "Password": "Κωδικός πρόσβασης",
-    "Password (optional)": "Κωδικός πρόσβασης (προαιρετικό)",
-    "Max Players": "Μέγιστος αριθμός παικτών",
-    "Room Name": "Ονομα δωματίου",
-    "Join": "Συμμετοχή",
-    "Player Name": "Ονομα παίκτη",
-    "Set Player Name": "Ορισμός ονόματος παίκτη",
-    "Left Handed Mode": "Λειτουργία Αριστερόχειρας",
-    "Virtual Gamepad": "Εικονικό Gamepad",
-    "Disk": "Δίσκος",
-    "Press Keyboard": "Πατήστε Πληκτρολόγιο",
-    "INSERT COIN": "ΕΙΣΑΓΕΤΕ ΝΟΜΙΣΜΑ",
-    "Remove": "Αφαιρώ",
-    "SAVE LOADED FROM BROWSER": "ΑΠΟΘΗΚΕΥΣΗ ΦΟΡΤΩΜΕΝΟΥ ΑΠΟ ΤΟ BROWSER",
-    "SAVE SAVED TO BROWSER": "ΑΠΟΘΗΚΕΥΣΗ ΑΠΟΘΗΚΕΥΤΗΚΕ ΣΤΟ BROWSER",
-    "Join the discord": "Συμμετάσχετε στη διχόνοια",
-    "View on GitHub": "Προβολή στο GitHub",
-    "Failed to start game": "Απέτυχε η έναρξη του παιχνιδιού",
-    "Download Game BIOS": "Κατεβάστε το παιχνίδι BIOS",
-    "Decompress Game BIOS": "Αποσυμπίεση του BIOS του παιχνιδιού",
-    "Download Game Parent": "Κατεβάστε το παιχνίδι Parent",
-    "Decompress Game Parent": "Αποσυμπίεση γονέα παιχνιδιού",
-    "Download Game Patch": "Κατεβάστε το Patch παιχνιδιού",
-    "Decompress Game Patch": "Αποσυμπιέστε το Patch παιχνιδιού",
-    "Download Game State": "Λήψη κατάστασης παιχνιδιού",
-    "Check console": "Ελέγξτε την κονσόλα",
-    "Error for site owner": "Σφάλμα για τον ιδιοκτήτη του ιστότοπου",
-    "EmulatorJS": "EmulatorJS",
-    "Clear All": "Τα καθαρίζω όλα",
-    "Take Screenshot": "Λήψη στιγμιότυπου οθόνης",
-    "Quick Save": "ΓΡΗΓΟΡΗ ΑΠΟΘΗΚΕΥΣΗ",
-    "Quick Load": "Γρήγορη φόρτωση",
-    "REWIND": "ΠΙΣΩ ΠΙΣΩ",
-    "Rewind Enabled (requires restart)": "Το Rewind Enabled (απαιτεί επανεκκίνηση)",
-    "Rewind Granularity": "Rewind Granularity",
-    "Slow Motion Ratio": "Αναλογία αργής κίνησης",
-    "Slow Motion": "Αργή κίνηση",
-    "Home": "Σπίτι",
-    "EmulatorJS License": "Άδεια EmulatorJS",
-    "RetroArch License": "Άδεια RetroArch",
-    "SLOW MOTION": "ΑΡΓΗ ΚΙΝΗΣΗ",
-    "A": "ΕΝΑ",
-    "B": "σι",
-    "SELECT": "ΕΠΙΛΕΓΩ",
-    "START": "ΑΡΧΗ",
-    "UP": "ΠΑΝΩ",
-    "DOWN": "ΚΑΤΩ",
-    "LEFT": "ΑΡΙΣΤΕΡΑ",
-    "RIGHT": "ΣΩΣΤΑ",
-    "X": "Χ",
-    "Y": "Υ",
-    "L": "μεγάλο",
-    "R": "R",
-    "Z": "Ζ",
-    "STICK UP": "ΜΕΝΩ ΠΙΣΤΟΣ ΣΕ ΚΑΤΙ",
-    "STICK DOWN": "ΚΟΛΛΗΤΕ ΚΑΤΩ",
-    "STICK LEFT": "ΚΟΛΛΑ ΑΡΙΣΤΕΡΑ",
-    "STICK RIGHT": "ΚΟΛΛΗ ΣΩΣΤΟ",
-    "C-PAD UP": "C-PAD UP",
-    "C-PAD DOWN": "C-PAD DOWN",
-    "C-PAD LEFT": "C-PAD ΑΡΙΣΤΕΡΑ",
-    "C-PAD RIGHT": "C-PAD ΔΕΞΙΑ",
-    "MICROPHONE": "ΜΙΚΡΟΦΩΝΟ",
-    "BUTTON 1 / START": "ΚΟΥΜΠΙ 1 / ΕΝΑΡΞΗ",
-    "BUTTON 2": "ΚΟΥΜΠΙ 2",
-    "BUTTON": "ΚΟΥΜΠΙ",
-    "LEFT D-PAD UP": "ΑΡΙΣΤΕΡΟ D-PAD ΕΠΑΝΩ",
-    "LEFT D-PAD DOWN": "ΑΡΙΣΤΕΡΟ D-PAD ΚΑΤΩ",
-    "LEFT D-PAD LEFT": "ΑΡΙΣΤΕΡΟ D-PAD ΑΡΙΣΤΕΡΑ",
-    "LEFT D-PAD RIGHT": "ΑΡΙΣΤΕΡΟ D-PAD ΔΕΞΙΑ",
-    "RIGHT D-PAD UP": "ΔΕΞΙ D-PAD UP",
-    "RIGHT D-PAD DOWN": "ΔΕΞΙΟ D-PAD ΚΑΤΩ",
-    "RIGHT D-PAD LEFT": "ΔΕΞΙ D-PAD ΑΡΙΣΤΕΡΑ",
-    "RIGHT D-PAD RIGHT": "ΔΕΞΙΟ D-PAD ΔΕΞΙΑ",
-    "C": "ντο",
-    "MODE": "ΤΡΟΠΟΣ",
-    "FIRE": "ΦΩΤΙΑ",
-    "RESET": "ΕΠΑΝΑΦΟΡΑ",
-    "LEFT DIFFICULTY A": "ΑΡΙΣΤΕΡΑ ΔΥΣΚΟΛΙΑ Α",
-    "LEFT DIFFICULTY B": "ΑΡΙΣΤΕΡΑ ΔΥΣΚΟΛΙΑ Β",
-    "RIGHT DIFFICULTY A": "ΣΩΣΤΗ ΔΥΣΚΟΛΙΑ Α",
-    "RIGHT DIFFICULTY B": "ΣΩΣΤΗ ΔΥΣΚΟΛΙΑ Β",
-    "COLOR": "ΧΡΩΜΑ",
-    "B/W": "Β/Δ",
-    "PAUSE": "ΠΑΥΣΗ",
-    "OPTION": "ΕΠΙΛΟΓΗ",
-    "OPTION 1": "ΕΠΙΛΟΓΗ 1",
-    "OPTION 2": "ΕΠΙΛΟΓΗ 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "L ΚΟΛΛΗΣΗ",
-    "L STICK DOWN": "L ΚΟΛΛΗΤΕ ΚΑΤΩ",
-    "L STICK LEFT": "L STICK ΑΡΙΣΤΕΡΑ",
-    "L STICK RIGHT": "L ΚΟΛΛΑ ΔΕΞΙΑ",
-    "R STICK UP": "R ΚΟΛΛΗΣΗ",
-    "R STICK DOWN": "R ΚΟΛΛΗΤΕ ΚΑΤΩ",
-    "R STICK LEFT": "R STICK ΑΡΙΣΤΕΡΑ",
-    "R STICK RIGHT": "R ΚΟΛΛΑ ΔΕΞΙΑ",
-    "Start": "Αρχή",
-    "Select": "Επιλέγω",
-    "Fast": "Γρήγορα",
-    "Slow": "Αργός",
-    "a": "ένα",
-    "b": "σι",
-    "c": "ντο",
-    "d": "ρε",
-    "e": "μι",
-    "f": "φά",
-    "g": "σολ",
-    "h": "η",
-    "i": "Εγώ",
-    "j": "ι",
-    "k": "κ",
-    "l": "μεγάλο",
-    "m": "Μ",
-    "n": "n",
-    "o": "ο",
-    "p": "Π",
-    "q": "q",
-    "r": "r",
-    "s": "μικρό",
-    "t": "t",
-    "u": "u",
-    "v": "v",
-    "w": "w",
-    "x": "Χ",
-    "y": "y",
-    "z": "z",
-    "enter": "εισαγω",
-    "escape": "διαφυγή",
-    "space": "χώρος",
-    "tab": "αυτί",
-    "backspace": "backspace",
-    "delete": "διαγράφω",
-    "arrowup": "βέλος επάνω",
-    "arrowdown": "βέλος προς τα κάτω",
-    "arrowleft": "αριστερό βέλος",
-    "arrowright": "βέλος δεξιά",
-    "f1": "στ1",
-    "f2": "στ2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "στ6",
-    "f7": "f7",
-    "f8": "f8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "βάρδια",
-    "control": "έλεγχος",
-    "alt": "alt",
-    "meta": "μετα",
-    "capslock": "κεφαλαία",
-    "insert": "εισάγετε",
-    "home": "Σπίτι",
-    "end": "τέλος",
-    "pageup": "σελίδα προς τα πάνω",
-    "pagedown": "σελίδα κάτω",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "LEFT_STICK_X",
-    "LEFT_STICK_Y": "LEFT_STICK_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "RIGHT_STICK_Y",
-    "LEFT_TRIGGER": "LEFT_TRIGGER",
-    "RIGHT_TRIGGER": "RIGHT_TRIGGER",
-    "A_BUTTON": "ΕΝΑ ΚΟΥΜΠΙ",
-    "B_BUTTON": "B_BUTTON",
-    "X_BUTTON": "X_BUTTON",
-    "Y_BUTTON": "Y_BUTTON",
-    "START_BUTTON": "ΚΟΥΜΠΙ ΕΚΚΙΝΗΣΗΣ",
-    "SELECT_BUTTON": "SELECT_BUTTON",
-    "L1_BUTTON": "L1_BUTTON",
-    "R1_BUTTON": "R1_BUTTON",
-    "L2_BUTTON": "L2_BUTTON",
-    "R2_BUTTON": "R2_BUTTON",
-    "LEFT_THUMB_BUTTON": "LEFT_THUMB_BUTTON",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_BUTTON",
-    "DPAD_UP": "DPAD_UP",
-    "DPAD_DOWN": "DPAD_DOWN",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "DPAD_RIGHT"
+    "Code": "Κωδικός",
+    "Add Cheat Code": "Προσθήκη κωδικού παιχνιδιού",
+    "OK": "Εντάξει",
+    "Add Cheat": "Προσθήκη κωδικού",
+    "Cache Manager": "Διαχείριση μνήμης",
+    "Press keyboard or gamepad": "Πατήστε στο πληκτρολόγιο ή στο μοχλό",
+    "Gamepad": "Μοχλός",
+    "Keyboard": "Πληκτρολόγιο",
+    "Set": "Διαμόρφωση",
+    "QUICK SAVE STATE": "Γρήγορη αποθήκευση",
+    "QUICK LOAD STATE": "Γρήγορη φόρτωση",
+    "CHANGE STATE SLOT": "Εναλλαγή θέσης αποθήκευσης",
+    "INSERT COIN": "Βάλτε κέρμα",
+    "Press keyboard or gamepad": "Πατήστε στο πληκτρολόγιο ή στο μοχλό",
+    "Press escape (esc) to clear": "Πατήστε escape (esc) για καθαρισμό",
+    "Netplay": "Online παιχνίδι",
+    "Rooms": "Online παιχνίδια",
+    "Players": "Παίκτες",
+    "Player": "Παίκτης",
+    "Room Name": "Όνομα online παιχνιδιού",
+    "Password": "Κωδικός",
+    "Name": "Όνομα",
+    "Quit Room": "Έξοδος",
+    "Create a Room": "Δημιουργία online παιχνιδιού",
+    "Set Player Name": "Δημιουργία ονόματος παίκτη",
+    "Player Name": "Όνομα παίκτη",
+    "Room Name": "Όνομα online παιχνιδιού",
+    "Create a Room": "Δημιουργία online παιχνιδιού",
+    "Password (optional)": "Κωδικός (προαιρετικά)",
+    "Select": "Select",
+    "Start": "Start",
+    "Menu": "Menu",
+    "Decompress Game Core": "Αποσυμπίεση αρχείου πυρήνα παιχνιδιού",
+    "Decompress Game Data": "Αποσυμπίεση αρχείων παιχνιδιού",
+    "Decompress Game Patch": "Αποσυμπίεση πρόσθετων αρχείων παιχνιδιού",
+    "Download Game Data": "Λήψη αρχείων παιχνιδιού",
+    "Download Game Core": "Λήψη αρχείου πυρήνα παιχνιδιού",
+    "Network Error": "Σφάλμα δικτύου",
+    "Default": "Προκαθορισμένο",
+    "default": "προκαθορισμένο",
+    "Save State Location": "Διαδρομή αποθήκευσης",
+    "Save State Slot": "Θυρίδα αποθήκευσης",
+    "Color Palette": "Χρωματοπαλέτα",
+    "No Sprite Limit": "Στοιχεία χωρίς όριο",
+    "Enabled": "Ενεργοποιημένο",
+    "Disabled": "Απενεργοποιημένο",
+    "enabled": "ενεργοποιημένο",
+    "disabled": "απενεργοποιημένο",
+    "Low": "Χαμηλό",
+    "High": "Υψηλό",
+    "Very High": "Πολύ Υψηλό",
+    "4 Players Support": "Υποστήριξη 4 παικτών",
+    "Turbo Enable": "Ενεργοποίηση Turbo",
+    "None": "Κανένα",
+    "Both": "Και τα δύο",
+    "Region": "Περιοχή",
+    "SuperFX Overclock": "Υπερχρονισμός SuperFX",
+    "Sound Quality": "Ποιότητα ήχου",
+    "GB Colorization": "Χρωματισμός GB",
+    "auto": "αυτόματο",
+    "internal": "εσωτερικό",
+    "Internal Palette": "Εσωτερική Παλέτα",
+    "GBC - Blue": "GBC - Μπλε",
+    "GBC - Brown": "GBC - Καφέ",
+    "GBC - Dark Blue": "GBC - Σκούρο Μπλε",
+    "GBC - Dark Brown": "GBC - Σκούρο Καφέ",
+    "GBC - Dark Green": "GBC - Σκούρο Πράσινο",
+    "GBC - Grayscale": "GBC - Κλίμακα του γκρι",
+    "GBC - Green": "GBC - Πράσινο",
+    "GBC - Inverted": "GBC - Ανεστραμμένο",
+    "GBC - Orange": "GBC - Πορτοκαλί",
+    "GBC - Red": "GBC - Κόκκινο",
+    "GBC - Pastel Mix": "GBC - Παστέλ Μίξη",
+    "GBC - Yellow": "GBC - Κίτρινο",
+    "Frameskip": "Παράλειψη Καρέ",
+    "Solar sensor level": "Επίπεδο ηλιακού σένσορα",
+    "Enable Turbo Buttons": "Ενεργοποίηση τούρμπο κουμπιών",
+    "Turbo Delay in frames": "Καθυστέρηση τούρμπο στα καρέ",
+    "Auto": "Αυτόματο",
+    "Aspect Ratio (Need to refresh page)": "Αναλογία Απεικόνισης (Χρειάζεται ανανέωση σελίδας)",
+    "16:9 Resolution": "16:9 Ανάλυση",
+    "4:3 Resolution": "4:3 Ανάλυση",
+    "Player 1 Pak": "Παίκτης 1 Pak",
+    "Player 2 Pak": "Παίκτης 2 Pak",
+    "Player 3 Pak": "Παίκτης 3 Pak",
+    "Player 4 Pak": "Παίκτης 4 Pak",
+    "none": "κανένα",
+    "memory": "μνήμη",
+    "rumble": "rumble",
+    "Screen layout": "Διάταξη οθόνης",
+    "right/left": "δεξιά/αριστερά",
+    "left/right": "αριστερά/δεξιά",
+    "bottom/top": "κάτω/επάνω",
+    "top/bottom": "επάνω/κάτω",
+    "top only": "Μόνο επάνω",
+    "bottom only": "Μόνο κάτω",
+    "quick switch": "Γρήγορη εναλλαγή",
+    "hybrid/bottom": "Υβριδικά/κάτω",
+    "hybrid/top": "-Υβριδικά/επάνω",
+    "Screen Rotation": "Περιστροφή οθόνης",
+    "CPU speed": "Ταχύτητα επεξεργαστή",
+    "Sound output": "Έξοδος ήχου",
+    "mono": "μονοφωνικός",
+    "stereo": "στερεοφωνικός",
+    "OFF": "ΚΛΕΙΣΤΟ",
+    "ON": "ΑΝΟΙΚΤΟ",
+    "Fast Blitter": "Γρήγορο Μπλίτερ",
+    "Bios": "Bios",
+    "Enable second memory card": "Ενεργοποίηση δεύτερης κάρτας μνήμης",
+    "Pad 1 Type": "Τύπος Pad 1",
+    "Pad 2 Type": "Τύπος Pad 2",
+    "Pad 3 Type": "Τύπος Pad 3",
+    "Pad 4 Type": "Τύπος Pad 4",
+    "standard": "πρότυπο",
+    "analog": "αναλογικός μοχλος",
+    "negcon": "negcon μοχλός",
+    "Enable Vibration": "Ενεργοποίηση Δόνησης",
+    "Enable interlacing mode(s)": "Ενεργοποίηση λειτουργίας διαπλοκής(s)",
+    "Enhanced resolution (slow)": "Βελτιωμένη ανάλυση (αργό)",
+    "Enhanced resolution speed hack": "Βελτιωμένη ανάλυση χακάρισμα ταχύτητας",
+    "Aspect ratio": "Αναλογία απεικόνισης",
+    "CPU overclock": "Υπερχρονισμός επεξεργαστή",
+    "Force Neo Geo mode": "Επιβολή λειτουργίας Neo Geo",
+    "Diagnostic Input": "Διαγωνστική εισαγωγή",
+    "download": "λήψη",
+    "keep in browser": "αποθήκευση στον περιηγητή",
+    "Webassembly support is not detected in this browser": "Η λειτουργία Webassembly δεν υποστηρίζεται από τον τρέχον περιηγητή",
+    "Please upgrade your browser to the latest version": "Παρακαλώ αναβαθμίστε τον περιηγητή σας στην τελευταία έκδοση",
+    "Missing mame config": "Λείπει το αρχείο διαμόρφωσης mame",
+    "Stop Screen Recording": "Στάματημα εγγραφής οθόνης",
+    "Start Screen Recording": "Εκκίνηση εγγραφής οθόνης",
+    "Take Screenshot": "Στιγμιότυπο οθόνης",
+    "Quick Save": "Γρήγορη Αποθήκευση",
+    "Quick Load": "Γρήγορη Φόρτωση"
 }
