--- a/data/localization/jv-JV.json
+++ b/data/localization/jv-JV.json
@@ -1,301 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "Baleni meneh",
-    "Pause": "ngaso",
-    "Play": "Dolanan",
-    "Save State": "Simpen Negara",
-    "Load State": "Status beban",
-    "Control Settings": "Setelan Kontrol",
-    "Cheats": "Cidra",
-    "Cache Manager": "Cache Manager",
-    "Export Save File": "Ekspor Simpen File",
-    "Import Save File": "Ngimpor Simpen File",
-    "Netplay": "Netplay",
-    "Mute": "bisu",
-    "Unmute": "Unmute",
-    "Settings": "Setelan",
-    "Enter Fullscreen": "Ketik Fullscreen",
-    "Exit Fullscreen": "Metu Fullscreen",
-    "Reset": "Reset",
-    "Clear": "Cetha",
-    "Close": "Nutup",
-    "QUICK SAVE STATE": "CEPAT SAVE STATE",
-    "QUICK LOAD STATE": "STATE LOAD CEPAT",
-    "CHANGE STATE SLOT": "GANTI STATE slot",
-    "FAST FORWARD": "CEPAT MAJU",
-    "Player": "Pamuter",
-    "Connected Gamepad": "Gamepad sing disambungake",
-    "Gamepad": "Gamepad",
-    "Keyboard": "Papan ketik",
-    "Set": "Set",
-    "Add Cheat": "Tambah Ngapusi",
-    "Create a Room": "Nggawe Kamar",
-    "Rooms": "kamar",
-    "Start Game": "Miwiti Game",
-    "Loading...": "Loading...",
-    "Download Game Core": "Unduh Game Core",
-    "Decompress Game Core": "Decompress Game Core",
-    "Download Game Data": "Unduh Data Game",
-    "Decompress Game Data": "Decompress Game Data",
-    "Shaders": "Shaders",
-    "Disabled": "dipatèni",
-    "2xScaleHQ": "2xSkalaHQ",
-    "4xScaleHQ": "4xSkalaHQ",
-    "CRT easymode": "Mode gampang CRT",
-    "CRT aperture": "bukaan CRT",
-    "CRT geom": "CRT geom",
-    "CRT mattias": "CRT mattias",
-    "FPS": "FPS",
-    "show": "nuduhake",
-    "hide": "ndhelikake",
-    "Fast Forward Ratio": "Rasio Maju Cepet",
-    "Fast Forward": "Cepet Maju",
-    "Enabled": "diaktifake",
-    "Save State Slot": "Simpen State Slot",
-    "Save State Location": "Simpen Lokasi Negara",
-    "Download": "Ngundhuh",
-    "Keep in Browser": "Simpen ing Browser",
-    "Auto": "Auto",
-    "NTSC": "NTSC",
-    "PAL": "PAL",
-    "Dendy": "Dendy",
-    "8:7 PAR": "8:7 PAR",
-    "4:3": "4:3",
-    "Low": "kurang",
-    "High": "dhuwur",
-    "Very High": "Dhuwur banget",
-    "None": "ora ana",
-    "Player 1": "Pamuter 1",
-    "Player 2": "Pamuter 2",
-    "Both": "loro-lorone",
-    "SAVED STATE TO SLOT": "STATE disimpen kanggo slot",
-    "LOADED STATE FROM SLOT": "STATE dimuat saka slot",
-    "SET SAVE STATE SLOT TO": "SET Simpen STATE slot TO",
-    "Network Error": "Kesalahan Jaringan",
-    "Submit": "Kirimake",
-    "Description": "Katrangan",
-    "Code": "Kode",
+    "i18n": {
+        "restart": "Baleni meneh",
+        "play": " Dolanan",
+        "pause": " Ngaso",
+        "played": " Diputer",
+        "volume": " Volume",
+        "mute": " Bisu (F9)",
+        "unmute": " Mbusak bisu (F9)",
+        "enterFullscreen": "Ketik layar wutuh",
+        "exitFullscreen": " Metu saka layar wutuh",
+        "settings": " Setelan",
+        "saveState": "Simpen Status (Shift + F2)",
+        "loadState": "Muat Status (Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": " Miwiti Rekaman Layar",
+        "netplay": " Netplay",
+        "gamepad": " Setelan Kontrol",
+        "cheat": " Ngapusi",
+        "menuBack": " Bali menyang menu sadurungé",
+        "normal": " Biasa wae",
+        "all": " Kabeh",
+        "reset": " Reset",
+        "disabled": " Dipatèni",
+        "enabled": " Diaktifake",
+        "playNow": " Play Saiki"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": " Shader",
+            "options": {
+                "disabled": " Dipatèni",
+                "2xScaleHQ.glslp": "2xSkalaHQ",
+                "4xScaleHQ.glslp": "4xSkalaHQ",
+                "crt-easymode.glslp": "CRT mode gampang",
+                "crt-aperture.glslp": " Bukaan CRT",
+                "crt-geom.glslp": " CRT geom",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": " Virtual Gamepad",
+            "options": {
+                "disabled": " Dipatèni",
+                "enabled": " Diaktifake"
+            },
+            "default": "enabled"
+        }
+    },
+    "Control Settings": " Setelan Kontrol",
+    "Player 1": " Pamuter 1",
+    "Player 2": " Pamuter 2",
+    "Player 3": " Pamuter 3",
+    "Player 4": " Pamuter 4",
+    "Update": " Nganyari",
+    "Reset": " Reset",
+    "Clear": " Cetha",
+    "Cancel": " Batal",
+    "Close": " Nutup",
+    "Empty": "Kosong",
+    "Loading": " Loading",
+    "Submit": " Ngirim",
+    "Description": " Katrangan",
+    "Code": " Kode",
     "Add Cheat Code": "Tambah Kode Ngapusi",
-    "Leave Room": "Ninggalake Kamar",
-    "Password": "Sandi",
-    "Password (optional)": "Sandi (opsional)",
-    "Max Players": "Pemain Max",
-    "Room Name": "Jeneng Kamar",
-    "Join": "gabung",
-    "Player Name": "Jeneng Pamuter",
-    "Set Player Name": "Setel Jeneng Player",
-    "Left Handed Mode": "Mode Tangan Kiri",
-    "Virtual Gamepad": "Gamepad virtual",
-    "Disk": "Disk",
-    "Press Keyboard": "Pencet Keyboard",
-    "INSERT COIN": "INSERT COIN",
-    "Remove": "Mbusak",
-    "SAVE LOADED FROM BROWSER": "Simpen dimuat saka BROWSER",
-    "SAVE SAVED TO BROWSER": "SAVE disimpen menyang BROWSER",
-    "Join the discord": "Melu discord",
-    "View on GitHub": "Deleng ing GitHub",
-    "Failed to start game": "Gagal miwiti game",
-    "Download Game BIOS": "Unduh Game BIOS",
-    "Decompress Game BIOS": "Decompress Game BIOS",
-    "Download Game Parent": "Unduh Game Parent",
-    "Decompress Game Parent": "Decompress Game Induk",
-    "Download Game Patch": "Unduh Game Patch",
-    "Decompress Game Patch": "Decompress Game Patch",
-    "Download Game State": "Unduh Game State",
-    "Check console": "Priksa konsol",
-    "Error for site owner": "Kesalahan kanggo pemilik situs",
-    "EmulatorJS": "EmulatorJS",
-    "Clear All": "Busek kabeh",
-    "Take Screenshot": "Njupuk Screenshot",
-    "Quick Save": "Cepet Simpen",
-    "Quick Load": "Muat cepet",
-    "REWIND": "REWIND",
-    "Rewind Enabled (requires restart)": "Rewind Enabled (mbutuhake urip maneh)",
-    "Rewind Granularity": "Rewind Granularity",
-    "Slow Motion Ratio": "Rasio Slow Motion",
-    "Slow Motion": "Gerakan alon",
-    "Home": "Ngarep",
-    "EmulatorJS License": "Lisensi EmulatorJS",
-    "RetroArch License": "Lisensi RetroArch",
-    "SLOW MOTION": "GERAKAN ALON",
-    "A": "A",
-    "B": "B",
-    "SELECT": "PILIH",
-    "START": "MULAI",
-    "UP": "UP",
-    "DOWN": "TURUN",
-    "LEFT": "KIRI",
-    "RIGHT": "TETEP",
-    "X": "X",
-    "Y": "Y",
-    "L": "L",
-    "R": "R",
-    "Z": "Z",
-    "STICK UP": "TETEP",
-    "STICK DOWN": "TETEP",
-    "STICK LEFT": "STIK KIRI",
-    "STICK RIGHT": "TETEP KANAN",
-    "C-PAD UP": "C-PAD UP",
-    "C-PAD DOWN": "C-PAD TURUN",
-    "C-PAD LEFT": "C-PAD ngiwa",
-    "C-PAD RIGHT": "C-PAD KANAN",
-    "MICROPHONE": "MIKROFON",
-    "BUTTON 1 / START": "TOMBOL 1 / MULAI",
-    "BUTTON 2": "TOMBOL 2",
-    "BUTTON": "TOMBOL",
-    "LEFT D-PAD UP": "Ngiwa D-PAD UP",
-    "LEFT D-PAD DOWN": "Ngiwa D-PAD mudhun",
-    "LEFT D-PAD LEFT": "KIRI D-PAD KIRI",
-    "LEFT D-PAD RIGHT": "KIRI D-PAD TEngen",
-    "RIGHT D-PAD UP": "TEngen D-PAD UP",
-    "RIGHT D-PAD DOWN": "TEngen D-PAD mudhun",
-    "RIGHT D-PAD LEFT": "TEngen D-PAD ngiwa",
-    "RIGHT D-PAD RIGHT": "TEngen D-PAD TEngen",
-    "C": "C",
-    "MODE": "MODE",
-    "FIRE": "KEBURU",
-    "RESET": "RESET",
-    "LEFT DIFFICULTY A": "KESULITAN KIRI A",
-    "LEFT DIFFICULTY B": "KESULITAN KIRIB",
-    "RIGHT DIFFICULTY A": "KESULITAN TEPAT A",
-    "RIGHT DIFFICULTY B": "KESULITAN B",
-    "COLOR": "WARNA",
-    "B/W": "B/W",
-    "PAUSE": "ngaso",
-    "OPTION": "PILIHAN",
-    "OPTION 1": "PILIHAN 1",
-    "OPTION 2": "PILIHAN 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "L LANGGENG",
-    "L STICK DOWN": "L TETEP",
-    "L STICK LEFT": "L STIK KIRI",
-    "L STICK RIGHT": "L TEKAN KANGEN",
-    "R STICK UP": "R TETEP",
-    "R STICK DOWN": "R TETEP",
-    "R STICK LEFT": "R STICK ngiwa",
-    "R STICK RIGHT": "R STIKES TEngen",
-    "Start": "Miwiti",
-    "Select": "Pilih",
-    "Fast": "Cepet",
-    "Slow": "alon-alon",
-    "a": "a",
-    "b": "b",
-    "c": "c",
-    "d": "d",
-    "e": "e",
-    "f": "f",
-    "g": "g",
-    "h": "h",
-    "i": "i",
-    "j": "j",
-    "k": "k",
-    "l": "l",
-    "m": "m",
-    "n": "n",
-    "o": "o",
-    "p": "p",
-    "q": "q",
-    "r": "r",
-    "s": "s",
-    "t": "t",
-    "u": "u",
-    "v": "v",
-    "w": "w",
-    "x": "x",
-    "y": "y",
-    "z": "z",
-    "enter": "mlebu",
-    "escape": "uwal",
-    "space": "panggonan",
-    "tab": "tab",
-    "backspace": "backspace",
-    "delete": "mbusak",
-    "arrowup": "panahan",
-    "arrowdown": "panah mudhun",
-    "arrowleft": "panah ngiwa",
-    "arrowright": "panah tengen",
-    "f1": "f1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "f6",
-    "f7": "f7",
-    "f8": "f8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "ngalih",
-    "control": "kontrol",
-    "alt": "alt",
-    "meta": "meta",
-    "capslock": "capslock",
-    "insert": "nglebokake",
-    "home": "ngarep",
-    "end": "pungkasan",
-    "pageup": "pageup",
-    "pagedown": "pagedown",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "LEFT_STICK_X",
-    "LEFT_STICK_Y": "LEFT_STICK_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "RIGHT_STICK_Y",
-    "LEFT_TRIGGER": "LEFT_TRIGGER",
-    "RIGHT_TRIGGER": "RIGHT_TRIGGER",
-    "A_BUTTON": "A_BUTTON",
-    "B_BUTTON": "B_BUTTON",
-    "X_BUTTON": "X_BUTTON",
-    "Y_BUTTON": "Y_BUTTON",
-    "START_BUTTON": "START_BUTTON",
-    "SELECT_BUTTON": "SELECT_BUTTON",
-    "L1_BUTTON": "L1_TOMBOL",
-    "R1_BUTTON": "R1_TOMBOL",
-    "L2_BUTTON": "L2_TOMBOL",
-    "R2_BUTTON": "R2_BUTTON",
-    "LEFT_THUMB_BUTTON": "TOMBOL_LEFT_THUMB_BUTTON",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_BUTTON",
-    "DPAD_UP": "DPAD_UP",
-    "DPAD_DOWN": "DPAD_DOWN",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "DPAD_RIGHT"
+    "OK": " OKE",
+    "Add Cheat": " Tambah Ngapusi",
+    "Cache Manager": " Pangurus Cache",
+    "Press keyboard or gamepad": "Pencet keyboard utawa gamepad",
+    "Gamepad": " Gamepad",
+    "Keyboard": " Papan ketik",
+    "Set": " Setel",
+    "QUICK SAVE STATE": " CEPAT SIMPEN NEGARA",
+    "QUICK LOAD STATE": " NEGARA MUNGKIN CEPAT",
+    "CHANGE STATE SLOT": "GANTENG STATE SLOT",
+    "INSERT COIN": " INSERT COIN",
+    "Press escape (esc) to clear": "Pencet escape (esc) kanggo mbusak",
+    "Netplay": " Netplay",
+    "Rooms": " Kamar",
+    "Players": " Pamuter",
+    "Player": " Pamuter",
+    "Room Name": " Jeneng Kamar",
+    "Password": " Sandi",
+    "Name": " Jeneng",
+    "Quit Room": " Metu Kamar",
+    "Create a Room": " Gawe Kamar",
+    "Set Player Name": " Setel Jeneng Pamuter",
+    "Player Name": " Jeneng Pamuter",
+    "Password (optional)": " Sandi (opsional)",
+    "Select": " Pilih",
+    "Start": " Miwiti",
+    "Menu": " Menu",
+    "Decompress Game Core": "Decompress Game Core",
+    "Decompress Game Data": "Decompress Game Data",
+    "Decompress Game Patch": " Dekompres Game Patch",
+    "Download Game Data": "Download Game Data",
+    "Download Game Core": " Unduh Game Core",
+    "Network Error": " Kesalahan Jaringan",
+    "Default": " Default",
+    "default": " gawan",
+    "Save State Location": "Simpen Lokasi Negara",
+    "Save State Slot": " Simpen Slot Negara",
+    "Color Palette": " Palet Warna",
+    "No Sprite Limit": " Ora ana watesan Sprite",
+    "Enabled": " Diaktifake",
+    "Disabled": " Dipatèni",
+    "enabled": " diaktifake",
+    "disabled": " dipatèni",
+    "Low": " Sedheng",
+    "High": " Dhuwur",
+    "Very High": " Dhuwur Banget",
+    "4 Players Support": "4 Dhukungan Pemain",
+    "Turbo Enable": " Turbo Aktifake",
+    "None": " Ora ana",
+    "Both": " Loro-lorone",
+    "Region": " Wilayah",
+    "SuperFX Overclock": " SuperFX Overclock",
+    "Sound Quality": " Kualitas Swara",
+    "GB Colorization": "Warna GB",
+    "auto": " otomatis",
+    "internal": " internal",
+    "Internal Palette": " Palet Internal",
+    "GBC - Blue": " GBC Biru",
+    "GBC - Brown": " GBC Coklat",
+    "GBC - Dark Blue": "GBC Biru Tua",
+    "GBC - Dark Brown": "GBC Coklat Tua",
+    "GBC - Dark Green": " GBC Ijo peteng",
+    "GBC - Grayscale": "GBC Grayscale",
+    "GBC - Green": " GBC Green",
+    "GBC - Inverted": "GBC Walik",
+    "GBC - Orange": " GBC Oranye",
+    "GBC - Red": " GBC Abang",
+    "GBC - Pastel Mix": "GBC Pastel Mix",
+    "GBC - Yellow": " GBC Kuning",
+    "Frameskip": " Frameskip",
+    "Solar sensor level": " Tingkat sensor surya",
+    "Enable Turbo Buttons": "Aktifake Tombol Turbo",
+    "Turbo Delay in frames": "Tundha Turbo ing pigura",
+    "Auto": " Otomatis",
+    "Aspect Ratio (Need to refresh page)": "Rasio Aspek (Perlu refresh kaca)",
+    "16:9 Resolution": " 16:9 Résolusi",
+    "4:3 Resolution": "4:3 Résolusi",
+    "Player 1 Pak": "Pemain 1 Pak",
+    "Player 2 Pak": " Pamuter 2 Pak",
+    "Player 3 Pak": "Pemain 3 Pak",
+    "Player 4 Pak": " Pamuter 4 Pak",
+    "none": " ora ana",
+    "memory": " memori",
+    "rumble": " gumujeng",
+    "Screen layout": " Tata letak layar",
+    "right/left": " tengen / kiwa",
+    "left/right": " kiwa/tengen",
+    "bottom/top": " ngisor / ndhuwur",
+    "top/bottom": " ndhuwur / ngisor",
+    "top only": " mung ndhuwur",
+    "bottom only": " mung ngisor",
+    "quick switch": " ngalih cepet",
+    "hybrid/bottom": " hibrida / ngisor",
+    "hybrid/top": " hibrida / ndhuwur",
+    "Screen Rotation": " Rotasi Layar",
+    "CPU speed": " Kacepetan CPU",
+    "Sound output": " Output swara",
+    "mono": " mono",
+    "stereo": " stereo",
+    "OFF": " MATI",
+    "ON": " ON",
+    "Fast Blitter": " Cepet Blitter",
+    "Bios": " Bios",
+    "Enable second memory card": "Aktifake kertu memori kapindho",
+    "Pad 1 Type": "Pad 1 Tipe",
+    "Pad 2 Type": " Tipe Pad 2",
+    "Pad 3 Type": " Tipe Pad 3",
+    "Pad 4 Type": "Pad 4 Tipe",
+    "standard": " standar",
+    "analog": " analog",
+    "negcon": "negkon",
+    "Enable Vibration": " Aktifake Geter",
+    "Enable interlacing mode(s)": "Aktifake mode interlacing",
+    "Enhanced resolution (slow)": "Resolusi sing ditingkatake (alon)",
+    "Enhanced resolution speed hack": "Retas kacepetan résolusi sing ditingkatake",
+    "Aspect ratio": " Rasio aspek",
+    "CPU overclock": " CPU overclock",
+    "Force Neo Geo mode": " Mode Force Neo Geo",
+    "Diagnostic Input": " Input Diagnostik",
+    "download": "undhuh",
+    "keep in browser": " tetep ing browser",
+    "Webassembly support is not detected in this browser": "Dhukungan webassembly ora dideteksi ing browser iki",
+    "Please upgrade your browser to the latest version": "Mangga upgrade browser sampeyan menyang versi paling anyar",
+    "Missing mame config": "Konfigurasi mame ilang",
+    "Stop Screen Recording": " Mungkasi Rekaman Layar",
+    "Start Screen Recording": " Miwiti Rekaman Layar",
+    "Take Screenshot": " Njupuk Screenshot",
+    "Quick Save": " Cepet Simpen",
+    "Quick Load": " Muatan Cepet"
 }
