--- a/data/localization/ar-AR.json
+++ b/data/localization/ar-AR.json
@@ -1,301 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "إعادة تشغيل",
-    "Pause": "يوقف",
-    "Play": "يلعب",
-    "Save State": "حالة الحفظ",
-    "Load State": "الدولة الحمل",
-    "Control Settings": "إعدادات التحكم",
-    "Cheats": "غش",
-    "Cache Manager": "مدير ذاكرة التخزين المؤقت",
-    "Export Save File": "تصدير حفظ الملف",
-    "Import Save File": "استيراد حفظ ملف",
-    "Netplay": "نيت بلاي",
-    "Mute": "صامت",
-    "Unmute": "إعادة الصوت",
-    "Settings": "إعدادات",
-    "Enter Fullscreen": "أدخل ملء الشاشة",
-    "Exit Fullscreen": "الخروج من الشاشة الكاملة",
-    "Reset": "إعادة ضبط",
-    "Clear": "واضح",
-    "Close": "يغلق",
-    "QUICK SAVE STATE": "حالة الحفظ السريع",
-    "QUICK LOAD STATE": "حالة التحميل السريع",
-    "CHANGE STATE SLOT": "تغيير فتحة الدولة",
-    "FAST FORWARD": "تقدم سريع",
-    "Player": "لاعب",
-    "Connected Gamepad": "Gamepad متصل",
-    "Gamepad": "لوحة الألعاب",
-    "Keyboard": "لوحة المفاتيح",
-    "Set": "تعيين",
-    "Add Cheat": "أضف الغش",
-    "Create a Room": "أنشئ غرفة",
-    "Rooms": "غرف",
-    "Start Game": "بدء اللعبة",
-    "Loading...": "تحميل...",
-    "Download Game Core": "تحميل Game Core",
-    "Decompress Game Core": "فك ضغط جوهر اللعبة",
-    "Download Game Data": "تنزيل بيانات اللعبة",
-    "Decompress Game Data": "فك ضغط بيانات اللعبة",
-    "Shaders": "شادر",
-    "Disabled": "عاجز",
-    "2xScaleHQ": "2xScaleHQ",
-    "4xScaleHQ": "4xScaleHQ",
-    "CRT easymode": "وضع CRT السهل",
-    "CRT aperture": "فتحة CRT",
-    "CRT geom": "CRT geom",
-    "CRT mattias": "CRT ماتياس",
-    "FPS": "FPS",
-    "show": "يعرض",
-    "hide": "يخفي",
-    "Fast Forward Ratio": "نسبة التقديم السريع",
-    "Fast Forward": "تقديم سريع",
-    "Enabled": "ممكن",
-    "Save State Slot": "حفظ الدولة فتحة",
-    "Save State Location": "حفظ موقع الدولة",
-    "Download": "تحميل",
-    "Keep in Browser": "ابق في المتصفح",
-    "Auto": "آلي",
-    "NTSC": "NTSC",
-    "PAL": "صديق",
-    "Dendy": "دندي",
-    "8:7 PAR": "8: 7 PAR",
-    "4:3": "4: 3",
-    "Low": "قليل",
-    "High": "عالي",
-    "Very High": "عالي جدا",
-    "None": "لا أحد",
-    "Player 1": "اللاعب 1",
-    "Player 2": "اللاعب 2",
-    "Both": "كلاهما",
-    "SAVED STATE TO SLOT": "الدولة المحفوظة في فتحة",
-    "LOADED STATE FROM SLOT": "حالة محملة من الفتحة",
-    "SET SAVE STATE SLOT TO": "تعيين فتحة حفظ الحالة إلى",
-    "Network Error": "خطأ في الشبكة",
-    "Submit": "يُقدِّم",
-    "Description": "وصف",
-    "Code": "شفرة",
-    "Add Cheat Code": "أضف كود الغش",
-    "Leave Room": "غادر الغرفة",
-    "Password": "كلمة المرور",
-    "Password (optional)": "كلمة المرور (اختياري)",
-    "Max Players": "ماكس لاعبين",
-    "Room Name": "اسم الغرفة",
-    "Join": "ينضم",
-    "Player Name": "اسم اللاعب",
-    "Set Player Name": "تعيين اسم اللاعب",
-    "Left Handed Mode": "وضع اليد اليسرى",
-    "Virtual Gamepad": "لوحة الألعاب الافتراضية",
-    "Disk": "القرص",
-    "Press Keyboard": "اضغط على لوحة المفاتيح",
-    "INSERT COIN": "إدراج عملة",
-    "Remove": "يزيل",
-    "SAVE LOADED FROM BROWSER": "وفر محملًا من المتصفح",
-    "SAVE SAVED TO BROWSER": "تم الحفظ في المتصفح",
-    "Join the discord": "انضم إلى الفتنة",
-    "View on GitHub": "عرض على جيثب",
-    "Failed to start game": "فشل بدء اللعبة",
-    "Download Game BIOS": "تنزيل Game BIOS",
-    "Decompress Game BIOS": "فك ضغط Game BIOS",
-    "Download Game Parent": "تحميل Game Parent",
-    "Decompress Game Parent": "فك ضغط لعبة الوالد",
-    "Download Game Patch": "تنزيل Game Patch",
-    "Decompress Game Patch": "فك ضغط لعبة التصحيح",
-    "Download Game State": "تنزيل Game State",
-    "Check console": "تحقق من وحدة التحكم",
-    "Error for site owner": "خطأ لمالك الموقع",
-    "EmulatorJS": "المحاكي JS",
-    "Clear All": "امسح الكل",
-    "Take Screenshot": "خد لقطة للشاشة",
-    "Quick Save": "الحفظ السريع",
-    "Quick Load": "تحميل سريع",
-    "REWIND": "الترجيع",
-    "Rewind Enabled (requires restart)": "تم تمكين الترجيع (يتطلب إعادة التشغيل)",
-    "Rewind Granularity": "الترجيع المحبب",
-    "Slow Motion Ratio": "نسبة الحركة البطيئة",
-    "Slow Motion": "حركة بطيئة",
-    "Home": "بيت",
-    "EmulatorJS License": "رخصة EmulatorJS",
-    "RetroArch License": "ترخيص RetroArch",
-    "SLOW MOTION": "حركة بطيئة",
-    "A": "أ",
-    "B": "ب",
-    "SELECT": "يختار",
-    "START": "يبدأ",
-    "UP": "أعلى",
-    "DOWN": "تحت",
-    "LEFT": "غادر",
-    "RIGHT": "يمين",
-    "X": "X",
-    "Y": "ص",
-    "L": "إل",
-    "R": "ص",
-    "Z": "ض",
-    "STICK UP": "التصق",
-    "STICK DOWN": "التصق اسفل",
-    "STICK LEFT": "العصا اليسرى",
-    "STICK RIGHT": "العصا لليمين",
-    "C-PAD UP": "C-PAD UP",
-    "C-PAD DOWN": "C-PAD لأسفل",
-    "C-PAD LEFT": "يسار C-PAD",
-    "C-PAD RIGHT": "حق C-PAD",
-    "MICROPHONE": "ميكروفون",
-    "BUTTON 1 / START": "زر 1 / بدء",
-    "BUTTON 2": "الزر 2",
-    "BUTTON": "زر",
-    "LEFT D-PAD UP": "اليسار D-PAD UP",
-    "LEFT D-PAD DOWN": "اليسار D-PAD لأسفل",
-    "LEFT D-PAD LEFT": "اليسار D-PAD اليسار",
-    "LEFT D-PAD RIGHT": "اليسار D-PAD لليمين",
-    "RIGHT D-PAD UP": "حق D-PAD UP",
-    "RIGHT D-PAD DOWN": "لليمين D-PAD لأسفل",
-    "RIGHT D-PAD LEFT": "اليمين D-PAD اليسار",
-    "RIGHT D-PAD RIGHT": "حق D-PAD لليمين",
-    "C": "ج",
-    "MODE": "وضع",
-    "FIRE": "نار",
-    "RESET": "إعادة ضبط",
-    "LEFT DIFFICULTY A": "الصعوبة اليسرى أ",
-    "LEFT DIFFICULTY B": "الصعوبة اليسرى ب",
-    "RIGHT DIFFICULTY A": "الصعوبة الصحيحة أ",
-    "RIGHT DIFFICULTY B": "الصعوبة الصحيحة ب",
-    "COLOR": "لون",
-    "B/W": "ب / دبليو",
-    "PAUSE": "يوقف",
-    "OPTION": "خيار",
-    "OPTION 1": "الخيار 1",
-    "OPTION 2": "الخيار 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "إلصاق",
-    "L STICK DOWN": "العصا لأسفل",
-    "L STICK LEFT": "L العصا اليسار",
-    "L STICK RIGHT": "L العصا لليمين",
-    "R STICK UP": "R التصق",
-    "R STICK DOWN": "R العصا لأسفل",
-    "R STICK LEFT": "R العصا اليسار",
-    "R STICK RIGHT": "R العصا لليمين",
-    "Start": "يبدأ",
-    "Select": "يختار",
-    "Fast": "سريع",
-    "Slow": "بطيء",
-    "a": "أ",
-    "b": "ب",
-    "c": "ج",
-    "d": "د",
-    "e": "ه",
-    "f": "F",
-    "g": "ز",
-    "h": "ح",
-    "i": "أنا",
-    "j": "ي",
-    "k": "ك",
-    "l": "ل",
-    "m": "م",
-    "n": "ن",
-    "o": "ا",
-    "p": "ص",
-    "q": "ف",
-    "r": "ص",
-    "s": "س",
-    "t": "ر",
-    "u": "ش",
-    "v": "الخامس",
-    "w": "ث",
-    "x": "x",
-    "y": "ذ",
-    "z": "ض",
-    "enter": "يدخل",
-    "escape": "يهرب",
-    "space": "فضاء",
-    "tab": "فاتورة غير مدفوعة",
-    "backspace": "مسافة للخلف",
-    "delete": "يمسح",
-    "arrowup": "السهم",
-    "arrowdown": "السهم للاسفل",
-    "arrowleft": "السهم",
-    "arrowright": "السهم",
-    "f1": "و 1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "و 6",
-    "f7": "f7",
-    "f8": "و ٨",
-    "f9": "و 9",
-    "f10": "f10",
-    "f11": "و 11",
-    "f12": "f12",
-    "shift": "يحول",
-    "control": "يتحكم",
-    "alt": "بديل",
-    "meta": "ميتا",
-    "capslock": "caps lock",
-    "insert": "إدراج",
-    "home": "بيت",
-    "end": "نهاية",
-    "pageup": "pageup",
-    "pagedown": "اسفل الصفحة",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "٪",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": "؛",
-    ":": ":",
-    "'": "\"",
-    "\"": "\"",
-    ",": "و",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "؟",
-    "LEFT_STICK_X": "LEFT_STICK_X",
-    "LEFT_STICK_Y": "LEFT_STICK_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "RIGHT_STICK_Y",
-    "LEFT_TRIGGER": "الزناد الأيسر",
-    "RIGHT_TRIGGER": "الزناد الأيمن",
-    "A_BUTTON": "الزر",
-    "B_BUTTON": "B_BUTTON",
-    "X_BUTTON": "X_BUTTON",
-    "Y_BUTTON": "Y_BUTTON",
-    "START_BUTTON": "START_BUTTON",
-    "SELECT_BUTTON": "حدد زر",
-    "L1_BUTTON": "L1_BUTTON",
-    "R1_BUTTON": "R1_BUTTON",
-    "L2_BUTTON": "L2_BUTTON",
-    "R2_BUTTON": "R2_BUTTON",
-    "LEFT_THUMB_BUTTON": "LEFT_THUMB_BUTTON",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_BUTTON",
-    "DPAD_UP": "DPAD_UP",
-    "DPAD_DOWN": "DPAD_DOWN",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "DPAD_RIGHT"
+    "i18n": {
+        "restart": "اعادة البدء",
+        "play": " تشغيل",
+        "pause": " وقفة",
+        "played": " تم اللعب",
+        "volume": " الحجم",
+        "mute": " كتم الصوت (F9)",
+        "unmute": " إلغاء كتم الصوت (F9)",
+        "enterFullscreen": " أدخل ملء الشاشة",
+        "exitFullscreen": " الخروج من وضع ملء الشاشة",
+        "settings": " الإعدادات",
+        "saveState": " حفظ الحالة (إزاحة + F2)",
+        "loadState": " حالة التحميل (Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": " بدء تسجيل الشاشة",
+        "netplay": " نيت بلاي",
+        "gamepad": " إعدادات التحكم",
+        "cheat": " غش",
+        "menuBack": " ارجع إلى القائمة السابقة",
+        "normal": " عادي",
+        "all": " الكل",
+        "reset": " إعادة تعيين",
+        "disabled": " معطل",
+        "enabled": " ممكّن",
+        "playNow": " العب الآن"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": " شادر",
+            "options": {
+                "disabled": " معطل",
+                "2xScaleHQ.glslp": " 2x مقياس",
+                "4xScaleHQ.glslp": " 4xScaleHQ",
+                "crt-easymode.glslp": " وضع CRT السهل",
+                "crt-aperture.glslp": " فتحة CRT",
+                "crt-geom.glslp": " CRT geom",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": " لوحة الألعاب الافتراضية",
+            "options": {
+                "disabled": " معطل",
+                "enabled": " ممكّن"
+            },
+            "default": "enabled"
+        }
+    },
+    "Control Settings": " إعدادات التحكم",
+    "Player 1": " اللاعب 1",
+    "Player 2": " اللاعب 2",
+    "Player 3": " اللاعب 3",
+    "Player 4": " اللاعب 4",
+    "Update": " تحديث",
+    "Reset": " إعادة تعيين",
+    "Clear": " مسح",
+    "Cancel": " إلغاء",
+    "Close": " إغلاق",
+    "Empty": " فارغ",
+    "Loading": " تحميل",
+    "Submit": " إرسال",
+    "Description": " الوصف",
+    "Code": " كود",
+    "Add Cheat Code": " أضف كود الغش",
+    "OK": " حسنًا",
+    "Add Cheat": " أضف الغش",
+    "Cache Manager": " مدير ذاكرة التخزين المؤقت",
+    "Press keyboard or gamepad": " اضغط على لوحة المفاتيح أو لوحة الألعاب",
+    "Gamepad": " Gamepad",
+    "Keyboard": " لوحة المفاتيح",
+    "Set": " مجموعة",
+    "QUICK SAVE STATE": " حالة الحفظ السريع",
+    "QUICK LOAD STATE": " حالة التحميل السريع",
+    "CHANGE STATE SLOT": " تغيير فتحة الدولة",
+    "INSERT COIN": " أدخل عملة",
+    "Press escape (esc) to clear": " اضغط على مفتاح الهروب (esc) للمسح",
+    "Netplay": " نيت بلاي",
+    "Rooms": " الغرف",
+    "Players": " اللاعبين",
+    "Player": " لاعب",
+    "Room Name": " اسم الغرفة",
+    "Password": " كلمة المرور",
+    "Name": " الاسم",
+    "Quit Room": " قم بإنهاء الغرفة",
+    "Create a Room": " إنشاء غرفة",
+    "Set Player Name": " تعيين اسم اللاعب",
+    "Player Name": " اسم اللاعب",
+    "Password (optional)": " كلمة المرور (اختياري)",
+    "Select": " حدد",
+    "Start": " ابدأ",
+    "Menu": " القائمة",
+    "Decompress Game Core": " فك ضغط جوهر اللعبة",
+    "Decompress Game Data": " فك ضغط بيانات اللعبة",
+    "Decompress Game Patch": " فك ضغط لعبة التصحيح",
+    "Download Game Data": " تنزيل بيانات اللعبة",
+    "Download Game Core": " تحميل Game Core",
+    "Network Error": " خطأ في الشبكة",
+    "Default": " افتراضي",
+    "default": " الافتراضي",
+    "Save State Location": " حفظ موقع الدولة",
+    "Save State Slot": " حفظ فتحة الدولة",
+    "Color Palette": " لوحة الألوان",
+    "No Sprite Limit": " لا يوجد حد سبرايت",
+    "Enabled": " ممكّن",
+    "Disabled": " معطل",
+    "enabled": " ممكّن",
+    "disabled": " معطل",
+    "Low": " منخفض",
+    "High": " مرتفع",
+    "Very High": " مرتفع جدا",
+    "4 Players Support": " دعم 4 لاعبين",
+    "Turbo Enable": " تمكين توربو",
+    "None": " لا شيء",
+    "Both": " كلاهما",
+    "Region": " المنطقة",
+    "SuperFX Overclock": " SuperFX فيركلوك",
+    "Sound Quality": " جودة الصوت",
+    "GB Colorization": " تلوين GB",
+    "auto": " تلقائي",
+    "internal": " داخلي",
+    "Internal Palette": " لوحة داخلية",
+    "GBC - Blue": " GBC Blue",
+    "GBC - Brown": " جي بي سي براون",
+    "GBC - Dark Blue": " GBC أزرق داكن",
+    "GBC - Dark Brown": " GBC بني غامق",
+    "GBC - Dark Green": " GBC أخضر غامق",
+    "GBC - Grayscale": " GBC Grayscale",
+    "GBC - Green": " GBC Green",
+    "GBC - Inverted": " GBC مقلوب",
+    "GBC - Orange": " GBC Orange",
+    "GBC - Red": " جي بي سي أحمر",
+    "GBC - Pastel Mix": " جي بي سي باستيل ميكس",
+    "GBC - Yellow": " GBC Yellow",
+    "Frameskip": " Frameskip",
+    "Solar sensor level": " مستوى استشعار الطاقة الشمسية",
+    "Enable Turbo Buttons": " تمكين أزرار Turbo",
+    "Turbo Delay in frames": " تربو تأخير في الإطارات",
+    "Auto": " تلقائي",
+    "Aspect Ratio (Need to refresh page)": " نسبة العرض إلى الارتفاع (يلزم تحديث الصفحة)",
+    "16:9 Resolution": " دقة 16: 9",
+    "4:3 Resolution": " دقة 4: 3",
+    "Player 1 Pak": " اللاعب 1 باك",
+    "Player 2 Pak": " اللاعب 2 باك",
+    "Player 3 Pak": " اللاعب 3 باك",
+    "Player 4 Pak": " اللاعب 4 باك",
+    "none": " لا شيء",
+    "memory": " الذاكرة",
+    "rumble": " قعقعة",
+    "Screen layout": " تخطيط الشاشة",
+    "right/left": " يمين / يسار",
+    "left/right": " يسار / يمين",
+    "bottom/top": " أسفل / أعلى",
+    "top/bottom": " أعلى / أسفل",
+    "top only": " الجزء العلوي فقط",
+    "bottom only": " أسفل فقط",
+    "quick switch": " التبديل السريع",
+    "hybrid/bottom": " هجين / سفلي",
+    "hybrid/top": " هجين / علوي",
+    "Screen Rotation": " دوران الشاشة",
+    "CPU speed": " سرعة وحدة المعالجة المركزية",
+    "Sound output": " إخراج الصوت",
+    "mono": " أحادي",
+    "stereo": " ستيريو",
+    "OFF": " إيقاف",
+    "ON": " تشغيل",
+    "Fast Blitter": " ضباب سريع",
+    "Bios": " السير",
+    "Enable second memory card": " تفعيل بطاقة الذاكرة الثانية",
+    "Pad 1 Type": " نوع الوسادة 1",
+    "Pad 2 Type": " نوع الوسادة 2",
+    "Pad 3 Type": " نوع الوسادة 3",
+    "Pad 4 Type": " نوع الوسادة 4",
+    "standard": " قياسي",
+    "analog": " التناظرية",
+    "negcon": " نيجكون",
+    "Enable Vibration": " تمكين الاهتزاز",
+    "Enable interlacing mode(s)": " تمكين وضع (أوضاع) التداخل",
+    "Enhanced resolution (slow)": " دقة محسنة (بطيئة)",
+    "Enhanced resolution speed hack": " تحسين دقة سرعة الاختراق",
+    "Aspect ratio": " نسبة العرض إلى الارتفاع",
+    "CPU overclock": " وحدة المعالجة المركزية فيركلوك",
+    "Force Neo Geo mode": " فرض الوضع الجغرافي الجديد",
+    "Diagnostic Input": " مدخلات التشخيص",
+    "download": " تنزيل",
+    "keep in browser": " ابق في المتصفح",
+    "Webassembly support is not detected in this browser": " لم يتم الكشف عن دعم Webassembly في هذا المستعرض",
+    "Please upgrade your browser to the latest version": " الرجاء ترقية متصفحك إلى أحدث إصدار",
+    "Missing mame config": " مفقود mame config",
+    "Stop Screen Recording": " إيقاف تسجيل الشاشة",
+    "Start Screen Recording": " بدء تسجيل الشاشة",
+    "Take Screenshot": " خذ لقطة شاشة",
+    "Quick Save": " حفظ سريع",
+    "Quick Load": " تحميل سريع"
 }
