--- a/data/localization/ben-BEN.json
+++ b/data/localization/ben-BEN.json
@@ -1,301 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "আবার শুরু",
-    "Pause": "বিরতি",
-    "Play": "খেলা",
-    "Save State": "রাষ্ট্র সংরক্ষণ",
-    "Load State": "লোড স্টেট",
+    "i18n": {
+        "restart": "আবার শুরু",
+        "play": "খেলা",
+        "pause": " বিরতি",
+        "played": " খেলেছে",
+        "volume": " ভলিউম",
+        "mute": "নিঃশব্দ (F9)",
+        "unmute": "আনমিউট (F9)",
+        "enterFullscreen": "পূর্ণ স্ক্রীনে প্রবেশ করুন",
+        "exitFullscreen": "ফুলস্ক্রিন থেকে প্রস্থান করুন",
+        "settings": "সেটিংস",
+        "saveState": "সেভ স্টেট (Shift + F2)",
+        "loadState": "লোড স্টেট (Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "স্ক্রিন রেকর্ডিং শুরু করুন",
+        "netplay": "নেটপ্লে",
+        "gamepad": "নিয়ন্ত্রণ সেটিংস",
+        "cheat": "প্রতারক",
+        "menuBack": "আগের মেনুতে ফিরে যান",
+        "normal": " স্বাভাবিক",
+        "all": "সব",
+        "reset": "রিসেট করুন",
+        "disabled": " প্রতিবন্ধী",
+        "enabled": "সক্রিয়",
+        "playNow": "এখন খেলুন"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": "শাদের",
+            "options": {
+                "disabled": " প্রতিবন্ধী",
+                "2xScaleHQ.glslp": "2xScaleHQ",
+                "4xScaleHQ.glslp": "4xScaleHQ",
+                "crt-easymode.glslp": "সিআরটি ইজিমোড",
+                "crt-aperture.glslp": "সিআরটি অ্যাপারচার",
+                "crt-geom.glslp": "সিআরটি জিওম",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": "ভার্চুয়াল গেমপ্যাড",
+            "options": {
+                "disabled": " প্রতিবন্ধী",
+                "enabled": "সক্রিয়"
+            },
+            "default": "enabled"
+        }
+    },
     "Control Settings": "নিয়ন্ত্রণ সেটিংস",
-    "Cheats": "প্রতারণা করে",
-    "Cache Manager": "ক্যাশে ম্যানেজার",
-    "Export Save File": "সেভ ফাইল রপ্তানি করুন",
-    "Import Save File": "সেভ ফাইল ইম্পোর্ট করুন",
-    "Netplay": "নেটপ্লে",
-    "Mute": "নিঃশব্দ",
-    "Unmute": "আনমিউট করুন",
-    "Settings": "সেটিংস",
-    "Enter Fullscreen": "পূর্ণ পর্দায়ই যান",
-    "Exit Fullscreen": "পূর্ণ পর্দা সরান",
-    "Reset": "রিসেট",
-    "Clear": "পরিষ্কার",
-    "Close": "বন্ধ",
-    "QUICK SAVE STATE": "দ্রুত সেভ স্টেট",
-    "QUICK LOAD STATE": "দ্রুত লোড অবস্থা",
-    "CHANGE STATE SLOT": "রাজ্য স্লট পরিবর্তন করুন",
-    "FAST FORWARD": "দ্রুত অগ্রগামী",
-    "Player": "প্লেয়ার",
-    "Connected Gamepad": "সংযুক্ত গেমপ্যাড",
+    "Player 1": "খেলোয়াড় 1",
+    "Player 2": "খেলোয়াড় 2",
+    "Player 3": "খেলোয়াড় 3",
+    "Player 4": "খেলোয়াড় 4",
+    "Update": "আপডেট",
+    "Reset": "রিসেট করুন",
+    "Clear": " পরিষ্কার",
+    "Cancel": "বাতিল করুন",
+    "Close": " বন্ধ",
+    "Empty": " খালি",
+    "Loading": "লোড হচ্ছে",
+    "Submit": " জমা দিন",
+    "Description": " বর্ণনা",
+    "Code": "কোড",
+    "Add Cheat Code": " চিট কোড যোগ করুন",
+    "OK": "ঠিক আছে",
+    "Add Cheat": "প্রতারণা যোগ করুন",
+    "Cache Manager": "ক্যাশ ম্যানেজার",
+    "Press keyboard or gamepad": "কীবোর্ড বা গেমপ্যাড টিপুন",
     "Gamepad": "গেমপ্যাড",
     "Keyboard": "কীবোর্ড",
-    "Set": "সেট",
-    "Add Cheat": "প্রতারণা যোগ করুন",
-    "Create a Room": "একটি রুম তৈরি করুন",
+    "Set": " সেট",
+    "QUICK SAVE STATE": " দ্রুত সেভ স্টেট",
+    "QUICK LOAD STATE": "কুইক লোড স্টেট",
+    "CHANGE STATE SLOT": " রাজ্যের স্লট পরিবর্তন করুন৷",
+    "INSERT COIN": " কয়েন ঢোকান",
+    "Press escape (esc) to clear": " সাফ করতে escape (esc) টিপুন",
+    "Netplay": "নেটপ্লে",
     "Rooms": "রুম",
-    "Start Game": "খেলা শুরু কর",
-    "Loading...": "লোড হচ্ছে...",
-    "Download Game Core": "গেম কোর ডাউনলোড করুন",
-    "Decompress Game Core": "ডিকম্প্রেস গেম কোর",
-    "Download Game Data": "গেম ডেটা ডাউনলোড করুন",
-    "Decompress Game Data": "গেম ডেটা ডিকম্প্রেস করুন",
-    "Shaders": "শেডার্স",
-    "Disabled": "অক্ষম",
-    "2xScaleHQ": "2xScaleHQ",
-    "4xScaleHQ": "4xScaleHQ",
-    "CRT easymode": "সিআরটি ইজিমোড",
-    "CRT aperture": "CRT অ্যাপারচার",
-    "CRT geom": "CRT geom",
-    "CRT mattias": "সিআরটি ম্যাটিয়াস",
-    "FPS": "FPS",
-    "show": "প্রদর্শন",
-    "hide": "লুকান",
-    "Fast Forward Ratio": "দ্রুত ফরোয়ার্ড অনুপাত",
-    "Fast Forward": "দ্রুত অগ্রগামী",
-    "Enabled": "সক্রিয়",
-    "Save State Slot": "রাজ্য স্লট সংরক্ষণ করুন",
-    "Save State Location": "রাজ্য অবস্থান সংরক্ষণ করুন",
-    "Download": "ডাউনলোড করুন",
-    "Keep in Browser": "ব্রাউজারে রাখুন",
-    "Auto": "অটো",
-    "NTSC": "এনটিএসসি",
-    "PAL": "অন্তরঙ্গ বন্ধু",
-    "Dendy": "ডেন্ডি",
-    "8:7 PAR": "8:7 PAR",
-    "4:3": "4:3",
-    "Low": "কম",
-    "High": "উচ্চ",
-    "Very High": "সুউচ্চ",
-    "None": "কোনোটিই নয়",
-    "Player 1": "খেলোয়াড় 1",
-    "Player 2": "প্লেয়ার 2",
-    "Both": "উভয়",
-    "SAVED STATE TO SLOT": "স্লটে রাজ্য সংরক্ষণ করা হয়েছে",
-    "LOADED STATE FROM SLOT": "স্লট থেকে রাজ্য লোড",
-    "SET SAVE STATE SLOT TO": "সেভ স্টেট স্লট সেট করুন",
-    "Network Error": "নেটওয়ার্ক ত্রুটি",
-    "Submit": "জমা দিন",
-    "Description": "বর্ণনা",
-    "Code": "কোড",
-    "Add Cheat Code": "চিট কোড যোগ করুন",
-    "Leave Room": "ছুটি রুম",
-    "Password": "পাসওয়ার্ড",
-    "Password (optional)": "পাসওয়ার্ড (ঐচ্ছিক)",
-    "Max Players": "সর্বোচ্চ খেলোয়াড়",
+    "Players": "খেলোয়াড়",
+    "Player": "খেলোয়াড়",
     "Room Name": "রুমের নাম",
-    "Join": "যোগদান করুন",
-    "Player Name": "প্লেয়ারের নাম",
-    "Set Player Name": "প্লেয়ারের নাম সেট করুন",
-    "Left Handed Mode": "বাম হাতের মোড",
-    "Virtual Gamepad": "ভার্চুয়াল গেমপ্যাড",
-    "Disk": "ডিস্ক",
-    "Press Keyboard": "কীবোর্ড টিপুন",
-    "INSERT COIN": "মুদ্রা প্রবেশ করান",
-    "Remove": "অপসারণ",
-    "SAVE LOADED FROM BROWSER": "ব্রাউজার থেকে লোড সংরক্ষণ করুন",
-    "SAVE SAVED TO BROWSER": "ব্রাউজারে সংরক্ষণ করুন",
-    "Join the discord": "বিরোধে যোগ দিন",
-    "View on GitHub": "GitHub এ দেখুন",
-    "Failed to start game": "খেলা শুরু করতে ব্যর্থ",
-    "Download Game BIOS": "গেম BIOS ডাউনলোড করুন",
-    "Decompress Game BIOS": "গেম BIOS ডিকম্প্রেস করুন",
-    "Download Game Parent": "গেম প্যারেন্ট ডাউনলোড করুন",
-    "Decompress Game Parent": "ডিকম্প্রেস গেম প্যারেন্ট",
-    "Download Game Patch": "গেম প্যাচ ডাউনলোড করুন",
-    "Decompress Game Patch": "ডিকম্প্রেস গেম প্যাচ",
-    "Download Game State": "গেম স্টেট ডাউনলোড করুন",
-    "Check console": "কনসোল চেক করুন",
-    "Error for site owner": "সাইটের মালিকের জন্য ত্রুটি",
-    "EmulatorJS": "এমুলেটরজেএস",
-    "Clear All": "সব পরিষ্কার করে দাও",
-    "Take Screenshot": "স্ক্রিনশট নাও",
-    "Quick Save": "দ্রুত সংরক্ষণ",
-    "Quick Load": "দ্রুত লোড",
-    "REWIND": "রিওয়াইন্ড করুন",
-    "Rewind Enabled (requires restart)": "রিওয়াইন্ড সক্ষম (রিস্টার্ট প্রয়োজন)",
-    "Rewind Granularity": "রিওয়াইন্ড গ্রানুলারিটি",
-    "Slow Motion Ratio": "ধীর গতির অনুপাত",
-    "Slow Motion": "ধীর গতি",
-    "Home": "বাড়ি",
-    "EmulatorJS License": "এমুলেটরজেএস লাইসেন্স",
-    "RetroArch License": "রেট্রোআর্ক লাইসেন্স",
-    "SLOW MOTION": "ধীর গতি",
-    "A": "ক",
-    "B": "খ",
-    "SELECT": "নির্বাচন করুন",
-    "START": "শুরু",
-    "UP": "ইউপি",
-    "DOWN": "নিচে",
-    "LEFT": "বাম",
-    "RIGHT": "ডান",
-    "X": "এক্স",
-    "Y": "Y",
-    "L": "এল",
-    "R": "আর",
-    "Z": "জেড",
-    "STICK UP": "লেগে থাকা",
-    "STICK DOWN": "নিচে লাঠি",
-    "STICK LEFT": "স্টিক বাম",
-    "STICK RIGHT": "ডানে থাকুন",
-    "C-PAD UP": "সি-প্যাড ইউপি",
-    "C-PAD DOWN": "সি-প্যাড ডাউন",
-    "C-PAD LEFT": "সি-প্যাড বাম",
-    "C-PAD RIGHT": "সি-প্যাড ডান",
-    "MICROPHONE": "মাইক্রোফোন",
-    "BUTTON 1 / START": "বোতাম 1 / শুরু করুন",
-    "BUTTON 2": "বোতাম 2",
-    "BUTTON": "বোতাম",
-    "LEFT D-PAD UP": "বাম ডি-প্যাড আপ",
-    "LEFT D-PAD DOWN": "বাম ডি-প্যাড নিচে",
-    "LEFT D-PAD LEFT": "বাম ডি-প্যাড বাম",
-    "LEFT D-PAD RIGHT": "বাম ডি-প্যাড ডান",
-    "RIGHT D-PAD UP": "ডান ডি-প্যাড আপ",
-    "RIGHT D-PAD DOWN": "ডানদিকে ডি-প্যাড ডাউন",
-    "RIGHT D-PAD LEFT": "ডান ডি-প্যাড বাম",
-    "RIGHT D-PAD RIGHT": "ডান ডি-প্যাড ডান",
-    "C": "গ",
-    "MODE": "মোড",
-    "FIRE": "আগুন",
-    "RESET": "রিসেট",
-    "LEFT DIFFICULTY A": "বাম অসুবিধা ক",
-    "LEFT DIFFICULTY B": "বাম অসুবিধা বি",
-    "RIGHT DIFFICULTY A": "ডান অসুবিধা ক",
-    "RIGHT DIFFICULTY B": "সঠিক অসুবিধা বি",
-    "COLOR": "রঙ",
-    "B/W": "B/W",
-    "PAUSE": "বিরতি",
-    "OPTION": "বিকল্প",
-    "OPTION 1": "বিকল্প 1",
-    "OPTION 2": "বিকল্প 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "এল স্টিক আপ",
-    "L STICK DOWN": "এল স্টিক ডাউন",
-    "L STICK LEFT": "L স্টিক বাম",
-    "L STICK RIGHT": "L স্টিক ডান",
-    "R STICK UP": "আর স্টিক আপ",
-    "R STICK DOWN": "আর স্টিক ডাউন",
-    "R STICK LEFT": "R স্টিক বাম",
-    "R STICK RIGHT": "R স্টিক ডান",
-    "Start": "শুরু করুন",
-    "Select": "নির্বাচন করুন",
-    "Fast": "দ্রুত",
-    "Slow": "ধীর",
-    "a": "ক",
-    "b": "খ",
-    "c": "গ",
-    "d": "d",
-    "e": "e",
-    "f": "চ",
-    "g": "g",
-    "h": "জ",
-    "i": "i",
-    "j": "j",
-    "k": "k",
-    "l": "l",
-    "m": "মি",
-    "n": "n",
-    "o": "o",
-    "p": "পি",
-    "q": "q",
-    "r": "r",
-    "s": "s",
-    "t": "t",
-    "u": "u",
-    "v": "v",
-    "w": "w",
-    "x": "এক্স",
-    "y": "y",
-    "z": "z",
-    "enter": "প্রবেশ করা",
-    "escape": "পলায়ন",
-    "space": "স্থান",
-    "tab": "ট্যাব",
-    "backspace": "ব্যাকস্পেস",
-    "delete": "মুছে ফেলা",
-    "arrowup": "তীরচিহ্ন",
-    "arrowdown": "তীর নিচে",
-    "arrowleft": "তীর বাম",
-    "arrowright": "তীর ডান",
-    "f1": "f1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "f6",
-    "f7": "f7",
-    "f8": "f8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "স্থানান্তর",
-    "control": "নিয়ন্ত্রণ",
-    "alt": "alt",
-    "meta": "মেটা",
-    "capslock": "ক্যাপস লক",
-    "insert": "সন্নিবেশ",
-    "home": "বাড়ি",
-    "end": "শেষ",
-    "pageup": "উপরের পাতা",
-    "pagedown": "পৃষ্ঠা নিচে নামানো",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "এবং",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "LEFT_STICK_X",
-    "LEFT_STICK_Y": "LEFT_STICK_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "RIGHT_STICK_Y",
-    "LEFT_TRIGGER": "LEFT_TRIGGER",
-    "RIGHT_TRIGGER": "RIGHT_TRIGGER",
-    "A_BUTTON": "একটি বোতাম",
-    "B_BUTTON": "B_BUTTON",
-    "X_BUTTON": "X_BUTTON",
-    "Y_BUTTON": "Y_BUTTON",
-    "START_BUTTON": "শুরু বোতাম",
-    "SELECT_BUTTON": "SELECT_BUTTON",
-    "L1_BUTTON": "L1_BUTTON",
-    "R1_BUTTON": "R1_BUTTON",
-    "L2_BUTTON": "L2_BUTTON",
-    "R2_BUTTON": "R2_BUTTON",
-    "LEFT_THUMB_BUTTON": "LEFT_THUMB_BUTTON",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_BUTTON",
-    "DPAD_UP": "DPAD_UP",
-    "DPAD_DOWN": "DPAD_DOWN",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "DPAD_RIGHT"
+    "Password": "পাসওয়ার্ড",
+    "Name": "নাম",
+    "Quit Room": " রুম ছেড়ে দাও",
+    "Create a Room": " একটি রুম তৈরি করুনপ্লেয়ারের নাম সেট করুন",
+    "Set Player Name": "খেলোয়াড়ের নাম",
+    "Player Name": "পাসওয়ার্ড (ঐচ্ছিক)",
+    "Password (optional)": " নির্বাচন করুন",
+    "Select": "শুরু",
+    "Start": "মেনু",
+    "Menu": " গেম কোর ডিকম্প্রেস করুন",
+    "Decompress Game Core": "গেম ডেটা ডিকম্প্রেস করুন",
+    "Decompress Game Data": " ডিকম্প্রেস গেম প্যাচ",
+    "Decompress Game Patch": "গেম ডেটা ডাউনলোড করুন",
+    "Download Game Data": "গেম কোর ডাউনলোড করুন",
+    "Download Game Core": "নেটওয়ার্ক ত্রুটি",
+    "Network Error": "ডিফল্ট",
+    "Default": " ডিফল্ট",
+    "default": " রাজ্যের অবস্থান সংরক্ষণ করুন৷",
+    "Save State Location": " রাজ্য স্লট সংরক্ষণ করুন",
+    "Save State Slot": "রঙ প্যালেট",
+    "Color Palette": "কোন স্প্রাইট সীমা নেই",
+    "No Sprite Limit": "সক্রিয়",
+    "Enabled": " প্রতিবন্ধী",
+    "Disabled": "সক্রিয়",
+    "enabled": " অক্ষম",
+    "disabled": "নিম্ন",
+    "Low": " উচ্চ",
+    "High": "খুব উচ্চ",
+    "Very High": "4 প্লেয়ার সাপোর্ট",
+    "4 Players Support": "টার্বো সক্ষম",
+    "Turbo Enable": " কোনোটিই নয়",
+    "None": "দুটোই",
+    "Both": " অঞ্চল",
+    "Region": "SuperFX ওভারক্লক",
+    "SuperFX Overclock": " সাউন্ড কোয়ালিটি",
+    "Sound Quality": "জিবি কালারাইজেশন",
+    "GB Colorization": "অটো",
+    "auto": " অভ্যন্তরীণ",
+    "internal": "অভ্যন্তরীণ প্যালেট",
+    "Internal Palette": "জিবিসি ব্লু",
+    "GBC - Blue": "GBC ব্রাউন",
+    "GBC - Brown": "GBC গাঢ় নীল",
+    "GBC - Dark Blue": "GBC ডার্ক ব্রাউন",
+    "GBC - Dark Brown": "GBC গাঢ় সবুজ",
+    "GBC - Dark Green": "GBC গ্রেস্কেল",
+    "GBC - Grayscale": "জিবিসি গ্রিন",
+    "GBC - Green": "GBC উল্টানো",
+    "GBC - Inverted": "GBC কমলা",
+    "GBC - Orange": "GBC রেড",
+    "GBC - Red": "GBC প্যাস্টেল মিক্স",
+    "GBC - Pastel Mix": "GBC হলুদ",
+    "GBC - Yellow": "ফ্রেমস্কিপ",
+    "Frameskip": "সৌর সেন্সর স্তর",
+    "Solar sensor level": " টার্বো বোতাম সক্ষম করুন৷",
+    "Enable Turbo Buttons": "ফ্রেমে টার্বো বিলম্ব",
+    "Turbo Delay in frames": "অটো",
+    "Auto": "আসপেক্ট রেশিও (পৃষ্ঠা রিফ্রেশ করতে হবে)",
+    "Aspect Ratio (Need to refresh page)": "16:9 রেজোলিউশন",
+    "16:9 Resolution": "4:3 রেজোলিউশন",
+    "4:3 Resolution": "খেলোয়াড় 1 পাক",
+    "Player 1 Pak": "খেলোয়াড় 2 পাক",
+    "Player 2 Pak": "খেলোয়াড় ৩ পাক",
+    "Player 3 Pak": "প্লেয়ার 4 পাক",
+    "Player 4 Pak": " কোনোটিই নয়",
+    "none": "স্মৃতি",
+    "memory": "রম্বল",
+    "rumble": "স্ক্রিন লেআউট",
+    "Screen layout": "ডান/বাম",
+    "right/left": "বাম/ডান",
+    "left/right": "নিচে/উপরে",
+    "bottom/top": "শীর্ষ/নীচ",
+    "top/bottom": "শুধুমাত্র উপরে",
+    "top only": "শুধু নীচে",
+    "bottom only": " দ্রুত সুইচ",
+    "quick switch": "হাইব্রিড/নিচ",
+    "hybrid/bottom": "হাইব্রিড/টপ",
+    "hybrid/top": "স্ক্রিন ঘূর্ণন",
+    "Screen Rotation": " CPU গতি",
+    "CPU speed": " সাউন্ড আউটপুট",
+    "Sound output": "মনোস্টেরিও",
+    "mono": "বন্ধ",
+    "stereo": " চালু",
+    "OFF": "ফাস্ট ব্লিটার",
+    "ON": "বায়োস",
+    "Fast Blitter": "দ্বিতীয় মেমরি কার্ড সক্রিয় করুন",
+    "Bios": "প্যাড 1 প্রকার",
+    "Enable second memory card": "প্যাড 2 প্রকার",
+    "Pad 1 Type": "প্যাড 3 প্রকার",
+    "Pad 2 Type": "প্যাড 4 প্রকার",
+    "Pad 3 Type": "মান",
+    "Pad 4 Type": "অ্যানালগ",
+    "standard": "নেগকন",
+    "analog": "কম্পন সক্ষম করুন",
+    "negcon": "ইন্টারলেসিং মোড(গুলি) সক্ষম করুন",
+    "Enable Vibration": "বর্ধিত রেজোলিউশন (ধীরে)",
+    "Enable interlacing mode(s)": "বর্ধিত রেজোলিউশন গতি হ্যাক",
+    "Enhanced resolution (slow)": " আকৃতির অনুপাত",
+    "Enhanced resolution speed hack": "CPU ওভারক্লক",
+    "Aspect ratio": " নিও জিও মোড ফোর্স করুন",
+    "CPU overclock": "ডায়াগনস্টিক ইনপুট",
+    "Force Neo Geo mode": "ডাউনলোড করুনব্রাউজারে রাখুন",
+    "Diagnostic Input": "ওয়েবসেম্বলি সমর্থন এই ব্রাউজারে সনাক্ত করা হয়নি",
+    "download": "অনুগ্রহ করে আপনার ব্রাউজারটিকে সর্বশেষ সংস্করণে আপগ্রেড করুন৷",
+    "keep in browser": " mame কনফিগারেশন অনুপস্থিত",
+    "Webassembly support is not detected in this browser": "স্ক্রিন রেকর্ডিং বন্ধ করুন",
+    "Please upgrade your browser to the latest version": "স্ক্রিন রেকর্ডিং শুরু করুন",
+    "Missing mame config": "স্ক্রিনশট নিন",
+    "Stop Screen Recording": " দ্রুত সংরক্ষণ করুন",
+    "Start Screen Recording": " দ্রুত লোড",
+    "Take Screenshot": "",
+    "Quick Save": "undefined",
+    "Quick Load": "undefined"
 }
