--- a/data/localization/es-ES.json
+++ b/data/localization/es-ES.json
@@ -1,310 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "Reiniciar",
-    "Pause": "Pausar",
-    "Play": "Reanudar",
-    "Save State": "Guardar Estado",
-    "Load State": "Cargar Estado",
-    "Control Settings": "Ajustes de Control",
-    "Cheats": "Trucos",
-    "Cache Manager": "Administrador de Caché",
-    "Export Save File": "Exportar Archivo de Guardado",
-    "Import Save File": "Importar Archivo de Guardado",
-    "Netplay": "Juego en Red",
-    "Mute": "Silenciar",
-    "Unmute": "Activar Sonido",
-    "Settings": "Ajustes",
-    "Enter Fullscreen": "Pantalla Completa",
-    "Exit Fullscreen": "Salir de Pantalla Completa",
-    "Context Menu": "Menú Contextual",
+    "i18n": {
+        "restart": "Restart",
+        "play": "Jugar",
+        "pause": "Pausa",
+        "played": "Jugó",
+        "volume": "Volumen",
+        "mute": "Silencio (F9)",
+        "unmute": "Activar (F9)",
+        "enterFullscreen": "Pantalla completa",
+        "exitFullscreen": "Salir de pantalla completa",
+        "settings": "Ajustes",
+        "saveState": "Guardar Estado (Shift + F2)",
+        "loadState": "Cargar Estado (Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "Comenzar gravacion de pantalla",
+        "netplay": "Netplay",
+        "gamepad": "Ajustes de control",
+        "cheat": "Trampas",
+        "menuBack": "Volver al menú anterior",
+        "normal": "Normal",
+        "all": "Todo",
+        "reset": "Reset",
+        "disabled": "Desactivar",
+        "enabled": "Activar",
+        "playNow": "Jugar ahora"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": "Sombreador",
+            "options": {
+                "disabled": "Discapacitado",
+                "2xScaleHQ.glslp": "2xScaleHQ",
+                "4xScaleHQ.glslp": "4xScaleHQ",
+                "crt-easymode.glslp": "CRT easymode",
+                "crt-aperture.glslp": "CRT aperture",
+                "crt-geom.glslp": "CRT geom",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": "Controles Virtuales",
+            "options": {
+                "disabled": "Discapacitado",
+                "enabled": "Activado"
+            },
+            "default": "enabled"
+        }
+    },
+    "Control Settings": "Ajustes de control",
+    "Player 1": "Jugador 1",
+    "Player 2": "Jugador 2",
+    "Player 3": "Jugador 3",
+    "Player 4": "Jugador 4",
+    "Update": "Actualizar",
     "Reset": "Reiniciar",
     "Clear": "Limpiar",
-    "Close": "Cerrar",
-    "QUICK SAVE STATE": "GUARDADO RÁPIDO DE ESTADO",
-    "QUICK LOAD STATE": "CARGA RÁPIDA DE ESTADO",
-    "CHANGE STATE SLOT": "CAMBIAR RANURA DE ESTADO",
-    "FAST FORWARD": "AVANCE RÁPIDO",
-    "Player": "Jugador",
-    "Connected Gamepad": "Mando Conectado",
-    "Gamepad": "Mando",
-    "Keyboard": "Teclado",
-    "Set": "Guardar",
-    "Add Cheat": "Añadir Truco",
-    "Note that some cheats require a restart to disable": "Algunos trucos requieren reiniciar para desactivarlos",
-    "Create a Room": "Crear una Sala",
-    "Rooms": "Salas",
-    "Start Game": "Iniciar juego",
-    "Click to resume Emulator": "Haz clic para reanudar el Emulador",
-    "Drop save state here to load": "Suelta el estado guardado aquí para cargarlo",
-    "Loading...": "Cargando...",
-    "Download Game Core": "Descargando Núcleo del Juego",
-    "Outdated graphics driver": "Controlador de gráficos obsoleto",
-    "Decompress Game Core": "Descomprimiendo Núcleo del Juego",
-    "Download Game Data": "Descargando Datos del Juego",
-    "Decompress Game Data": "Descomprimiendo Datos del Juego",
-    "Shaders": "Shaders",
-    "Disabled": "Desactivado",
-    "2xScaleHQ": "2xScaleHQ",
-    "4xScaleHQ": "4xScaleHQ",
-    "CRT easymode": "CRT easymode",
-    "CRT aperture": "CRT aperture",
-    "CRT geom": "CRT geom",
-    "CRT mattias": "CRT mattias",
-    "FPS": "FPS",
-    "show": "mostrar",
-    "hide": "ocultar",
-    "Fast Forward Ratio": "Proporción de Avance Rápido",
-    "Fast Forward": "Avance Rápido",
-    "Enabled": "Activado",
-    "Save State Slot": "Guardar Ranura de Estado",
-    "Save State Location": "Guardar Ubicación de Estado",
-    "Download": "Descargar",
-    "Keep in Browser": "Mantener en Navegador",
-    "Auto": "Auto",
-    "NTSC": "NTSC",
-    "PAL": "PAL",
-    "Dendy": "Dendy",
-    "8:7 PAR": "8:7 PAR",
-    "4:3": "4:3",
-    "Low": "Bajo",
-    "High": "Alto",
-    "Very High": "Muy alto",
-    "None": "Ninguno",
-    "Player 1": "Jugador 1",
-    "Player 2": "jugador 2",
-    "Both": "Ambos",
-    "SAVED STATE TO SLOT": "ESTADO GUARDADO EN RANURA",
-    "LOADED STATE FROM SLOT": "ESTADO CARGADO DESDE LA RANURA",
-    "SET SAVE STATE SLOT TO": "ESTABLECER RANURA DE GUARDADO DE ESTADO EN",
-    "Network Error": "Error de Red",
-    "Submit": "Enviar",
+    "Cancel": "Cancelar",
+    "Close": "Cerca",
+    "Empty": "Vacío",
+    "Loading": "Cargando",
+    "Submit": "Mandar",
     "Description": "Descripción",
     "Code": "Código",
-    "Add Cheat Code": "Agregar Código de Trucos",
-    "Leave Room": "Dejar la Sala",
-    "Password": "Contraseña",
-    "Password (optional)": "Contraseña (opcional)",
-    "Max Players": "Jugadores Máximos",
-    "Room Name": "Nombre de la Sala",
-    "Join": "Unirse",
-    "Player Name": "Nombre del Jugador",
-    "Set Player Name": "Establecer Nombre de Jugador",
-    "Left Handed Mode": "Modo para Zurdos",
-    "Virtual Gamepad": "Mando Virtual",
-    "Disk": "Disco",
-    "Press Keyboard": "Presionar Teclado",
+    "Add Cheat Code": "Agregar código de Trampa",
+    "OK": "OK",
+    "Add Cheat": "Agregar Trampa",
+    "Cache Manager": "Administrador de Cache",
+    "Press keyboard or gamepad": "Presione el teclado o el controlador",
+    "Gamepad": "Control",
+    "Keyboard": "Teclado",
+    "Set": "Definir",
+    "QUICK SAVE STATE": "GUARDAR ESTADO RÁPIDO",
+    "QUICK LOAD STATE": "CARGA ESTADO RÁPIDO",
+    "CHANGE STATE SLOT": "CAMBIAR SLOT DEL ESTADO",
     "INSERT COIN": "INSERTE MONEDA",
-    "Remove": "Eliminar",
-    "SAVE LOADED FROM BROWSER": "GUARDAR CARGADO DESDE EL NAVEGADOR",
-    "SAVE SAVED TO BROWSER": "GUARDAR GUARDADO EN EL NAVEGADOR",
-    "Join the discord": "Únete al Discord",
-    "View on GitHub": "Ver en GitHub",
-    "Failed to start game": "Error al iniciar el juego",
-    "Download Game BIOS": "Descargando BIOS del Juego",
-    "Decompress Game BIOS": "Descomprimiendo BIOS del Juego",
-    "Download Game Parent": "Descargando Juego Principal",
-    "Decompress Game Parent": "Descomprimiendo Juego Principal",
-    "Download Game Patch": "Descargando Parche del Juego",
-    "Decompress Game Patch": "Descomprimiendo Parche del Juego",
-    "Download Game State": "Descargando Estado del Juego",
-    "Check console": "Verificar consola",
-    "Error for site owner": "Error para el propietario del sitio",
-    "EmulatorJS": "EmulatorJS",
-    "Clear All": "Limpiar todo",
-    "Take Screenshot": "Tomar Captura de Pantalla",
-    "Start screen recording": "Iniciar grabación de pantalla",
-    "Stop screen recording": "Detener grabación de pantalla",
-    "Quick Save": "Guardado Rápido",
-    "Quick Load": "Carga Rápida",
-    "REWIND": "REBOBINAR",
-    "Rewind Enabled (requires restart)": "Rebobinado Habilitado (requiere reinicio)",
-    "Rewind Granularity": "Granularidad de Rebobinado",
-    "Slow Motion Ratio": "Proporción de Cámara Lenta",
-    "Slow Motion": "Cámara Lenta",
-    "Home": "Inicio",
-    "EmulatorJS License": "Licencia de EmulatorJS",
-    "RetroArch License": "Licencia de RetroArch",
-    "This project is powered by": "Este proyecto está impulsado por",
-    "View the RetroArch license here": "Ver la licencia de RetroArch aquí",
-    "SLOW MOTION": "CÁMARA LENTA",
-    "A": "A",
-    "B": "B",
-    "SELECT": "SELECT",
-    "START": "START",
-    "UP": "ARRIBA",
-    "DOWN": "ABAJO",
-    "LEFT": "IZQUIERDA",
-    "RIGHT": "DERECHA",
-    "X": "X",
-    "Y": "Y",
-    "L": "L",
-    "R": "R",
-    "Z": "Z",
-    "STICK UP": "STICK ARRIBA",
-    "STICK DOWN": "STICK ABAJO",
-    "STICK LEFT": "STICK IZQUIERDA",
-    "STICK RIGHT": "STICK DERECHA",
-    "C-PAD UP": "C-PAD ARRIBA",
-    "C-PAD DOWN": "C-PAD ABAJO",
-    "C-PAD LEFT": "C-PAD IZQUIERDA",
-    "C-PAD RIGHT": "C-PAD DERECHA",
-    "MICROPHONE": "MICRÓFONO",
-    "BUTTON 1 / START": "BOTÓN 1 / INICIO",
-    "BUTTON 2": "BOTÓN 2",
-    "BUTTON": "BOTÓN",
-    "LEFT D-PAD UP": "D-PAD IZQUIERDO ARRIBA",
-    "LEFT D-PAD DOWN": "D-PAD IZQUIERDO ABAJO",
-    "LEFT D-PAD LEFT": "D-PAD IZQUIERDO IZQUIERDA",
-    "LEFT D-PAD RIGHT": "D-PAD IZQUIERDO DERECHA",
-    "RIGHT D-PAD UP": "D-PAD DERECHO ARRIBA",
-    "RIGHT D-PAD DOWN": "D-PAD DERECHO ABAJO",
-    "RIGHT D-PAD LEFT": "D-PAD DERECHO IZQUIERDO",
-    "RIGHT D-PAD RIGHT": "D-PAD DERECHO DERECHA",
-    "C": "C",
-    "MODE": "MODO",
-    "FIRE": "FUEGO",
-    "RESET": "RESET",
-    "LEFT DIFFICULTY A": "IZQUIERDA DIFICULTAD A",
-    "LEFT DIFFICULTY B": "IZQUIERDA DIFICULTAD B",
-    "RIGHT DIFFICULTY A": "DERECHA DIFICULTAD A",
-    "RIGHT DIFFICULTY B": "DERECHA DIFICULTAD B",
-    "COLOR": "COLOR",
-    "B/W": "B/N",
-    "PAUSE": "PAUSA",
-    "OPTION": "OPCIÓN",
-    "OPTION 1": "OPCIÓN 1",
-    "OPTION 2": "OPCION 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "L STICK ARRIBA",
-    "L STICK DOWN": "L STICK ABAJO",
-    "L STICK LEFT": "L STICK IZQUIERDA",
-    "L STICK RIGHT": "L STICK DERECHA",
-    "R STICK UP": "R STICK ARRIBA",
-    "R STICK DOWN": "R STICK ABAJO",
-    "R STICK LEFT": "R STICK IZQUIERDA",
-    "R STICK RIGHT": "R STICK DERECHA",
-    "Start": "Start",
+    "Press escape (esc) to clear": "Pressione (esc) para limpiar",
+    "Netplay": "Netplay",
+    "Rooms": "Salas",
+    "Players": "Jugadores",
+    "Player": "Jugador",
+    "Room Name": "Nombre de la Sala",
+    "Password": "Contraseña",
+    "Name": "Nombre",
+    "Quit Room": "Dejar Sala",
+    "Create a Room": "Crear una Sala",
+    "Set Player Name": "Configurar el nombre del jugador",
+    "Player Name": "Nombre del Jugador",
+    "Password (optional)": "Contraseña (opcional)",
     "Select": "Select",
-    "Fast": "Rápido",
-    "Slow": "Lento",
-    "a": "a",
-    "b": "b",
-    "c": "c",
-    "d": "d",
-    "e": "e",
-    "f": "f",
-    "g": "g",
-    "h": "h",
-    "i": "i",
-    "j": "j",
-    "k": "k",
-    "l": "l",
-    "m": "m",
-    "n": "n",
-    "o": "o",
-    "p": "p",
-    "q": "q",
-    "r": "r",
-    "s": "s",
-    "t": "t",
-    "u": "u",
-    "v": "v",
-    "w": "w",
-    "x": "x",
-    "y": "y",
-    "z": "z",
-    "enter": "intro",
-    "escape": "escape",
-    "space": "espacio",
-    "tab": "tabulador",
-    "backspace": "retroceso",
-    "delete": "borrar",
-    "arrowup": "flecha arriba",
-    "arrowdown": "flecha abajo",
-    "arrowleft": "flecha izquierda",
-    "arrowright": "flecha derecha",
-    "f1": "f1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "f6",
-    "f7": "f7",
-    "f8": "f8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "shift",
-    "control": "control",
-    "alt": "alt",
-    "meta": "meta",
-    "capslock": "bloq mayús",
-    "insert": "insertar",
-    "home": "inicio",
-    "end": "fin",
-    "pageup": "página arriba",
-    "pagedown": "página abajo",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "STICK_IZQUIERDO_X",
-    "LEFT_STICK_Y": "STICK_IZQUIERDO_Y",
-    "RIGHT_STICK_X": "STICK_DERECHO_X",
-    "RIGHT_STICK_Y": "STICK_DERECHO_Y",
-    "LEFT_TRIGGER": "GATILLO_IZQUIERDO",
-    "RIGHT_TRIGGER": "GATILLO_DERECHO",
-    "A_BUTTON": "BOTÓN_A",
-    "B_BUTTON": "BOTÓN_B",
-    "X_BUTTON": "BOTÓN_X",
-    "Y_BUTTON": "BOTÓN_Y",
-    "START_BUTTON": "BOTÓN_START",
-    "SELECT_BUTTON": "BOTÓN_SELECT",
-    "L1_BUTTON": "BOTÓN_L1",
-    "R1_BUTTON": "BOTÓN_R1",
-    "L2_BUTTON": "BOTÓN_L2",
-    "R2_BUTTON": "BOTÓN_R2",
-    "LEFT_THUMB_BUTTON": "BOTÓN_L3",
-    "RIGHT_THUMB_BUTTON": "BOTÓN_R3",
-    "DPAD_UP": "DPAD ARRIBA",
-    "DPAD_DOWN": "DPAD_ABAJO",
-    "DPAD_LEFT": "DPAD_IZQUIERDA",
-    "DPAD_RIGHT": "DPAD_DERECHO"
+    "Start": "Start",
+    "Menu": "Menu",
+    "Decompress Game Core": "Decompress Game Core",
+    "Decompress Game Data": "Decompress Game Data",
+    "Decompress Game Patch": "Decompress Game Patch",
+    "Download Game Data": "Download Game Data",
+    "Download Game Core": "Download Game Core",
+    "Network Error": "Network Error",
+    "Default": "Estándar",
+    "default": "estándar",
+    "Save State Location": "Guardar Estado Lugar",
+    "Save State Slot": "Cargar Slot del Lugar",
+    "Color Palette": "Paleta de Colores",
+    "No Sprite Limit": "Sin límite de Sprite",
+    "Enabled": "Activado",
+    "Disabled": "Discapacitado",
+    "enabled": "activado",
+    "disabled": "discapacitado",
+    "Low": "Bajo",
+    "High": "Alto",
+    "Very High": "Muy Alto",
+    "4 Players Support": "Soporte para 4 jugadores",
+    "Turbo Enable": "Activar Turbo",
+    "None": "Ninguna",
+    "Both": "Ambos",
+    "Region": "Región",
+    "SuperFX Overclock": "SuperFX Overclock",
+    "Sound Quality": "Calidad de Sonido",
+    "GB Colorization": "GB Coloración",
+    "auto": "auto",
+    "internal": "interno",
+    "Internal Palette": "Paleta Interna",
+    "GBC - Blue": "GBC - Azul",
+    "GBC - Brown": "GBC - Marrón",
+    "GBC - Dark Blue": "GBC - Azul Oscuro",
+    "GBC - Dark Brown": "GBC - Marrón Oscuro",
+    "GBC - Dark Green": "GBC - Verde Oscuro",
+    "GBC - Grayscale": "GBC - Gris",
+    "GBC - Green": "GBC - Verde",
+    "GBC - Inverted": "GBC - Invertido",
+    "GBC - Orange": "GBC - Naranja",
+    "GBC - Red": "GBC - Rojo",
+    "GBC - Pastel Mix": "GBC - Pastel Mix",
+    "GBC - Yellow": "GBC - Amarillo",
+    "Frameskip": "Frameskip",
+    "Solar sensor level": "Solar sensor level",
+    "Enable Turbo Buttons": "Permitir Botones Turbo",
+    "Turbo Delay in frames": "Turbo Delay en frames",
+    "Auto": "Auto",
+    "Aspect Ratio (Need to refresh page)": "Aspect Ratio (Necesita actualizar la página)",
+    "16:9 Resolution": "16:9 Resolución",
+    "4:3 Resolution": "4:3 Resolución",
+    "Player 1 Pak": "Jugador 1 Pak",
+    "Player 2 Pak": "Jugador 2 Pak",
+    "Player 3 Pak": "Jugador 3 Pak",
+    "Player 4 Pak": "Jugador 4 Pak",
+    "none": "ninguna",
+    "memory": "memoria",
+    "rumble": "rumble",
+    "Screen layout": "Diseño de Pantalla",
+    "right/left": "directo/izquierda",
+    "left/right": "izquierda/directo",
+    "bottom/top": "fondo/principal",
+    "top/bottom": "principal/fondo",
+    "top only": "principal algo",
+    "bottom only": "fondo algo",
+    "quick switch": "troca rapida",
+    "hybrid/bottom": "híbrido/fondo",
+    "hybrid/top": "híbrido/principal",
+    "Screen Rotation": "Rotación de tela",
+    "CPU speed": "Velocidad de CPU",
+    "Sound output": "Salida de Sonido",
+    "mono": "mono",
+    "stereo": "stereo",
+    "OFF": "Apagado",
+    "ON": "Encendido",
+    "Fast Blitter": "Fast Blitter",
+    "Bios": "Bios",
+    "Enable second memory card": "Habilitar segunda tarjeta de memoria",
+    "Pad 1 Type": "Pad Escribe 1",
+    "Pad 2 Type": "Pad Escribe 2",
+    "Pad 3 Type": "Pad Escribe 3",
+    "Pad 4 Type": "Pad Escribe 4",
+    "standard": "estándar",
+    "analog": "cosa análoga",
+    "negcon": "negcon",
+    "Enable Vibration": "Habilitar Vibración",
+    "Enable interlacing mode(s)": "Activar modo entrelazado(s)",
+    "Enhanced resolution (slow)": "Resolución mejorada (lento)",
+    "Enhanced resolution speed hack": "Velocidad de reproducción",
+    "Aspect ratio": "Aspect ratio",
+    "CPU overclock": "CPU overclock",
+    "Force Neo Geo mode": "Force Neo Geo mode",
+    "Diagnostic Input": "Diagnostic Input",
+    "download": "download",
+    "keep in browser": "mantener en el navegador",
+    "Webassembly support is not detected in this browser": "Suporte Webassembly no detectado en este navegador",
+    "Please upgrade your browser to the latest version": "Actualice su navegador a la última versión.",
+    "Missing mame config": "Falta la configuración de mame",
+    "Stop Screen Recording": "Detener Grabación de Pantalla",
+    "Start Screen Recording": "Começar Grabación de Pantalla",
+    "Take Screenshot": "Tomar Impresión",
+    "Quick Save": "Ahorrar rápido",
+    "Quick Load": "Cargar rápido"
 }
