--- a/data/localization/hi-HI.json
+++ b/data/localization/hi-HI.json
@@ -1,301 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "पुनः आरंभ करें",
-    "Pause": "विराम",
-    "Play": "खेल",
-    "Save State": "राज्य बचाओ",
-    "Load State": "राज्य लोड करें",
+    "i18n": {
+        "restart": "पुनर्प्रारंभ करें",
+        "play": "चलाएं",
+        "pause": "रोकें",
+        "played": "खेला",
+        "volume": "वॉल्यूम",
+        "mute": "म्यूट (F9)",
+        "unmute": "अनम्यूट (F9)",
+        "enterFullscreen": "पूर्ण स्क्रीन दर्ज करें",
+        "exitFullscreen": "फुलस्क्रीन से बाहर निकलें",
+        "settings": "सेटिंग्स",
+        "saveState": "राज्य बचाओ (Shift + F2)",
+        "loadState": "लोड स्टेट (Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "स्क्रीन रिकॉर्डिंग शुरू करें",
+        "netplay": "नेटप्ले",
+        "gamepad": "नियंत्रण सेटिंग्स",
+        "cheat": "धोखा",
+        "menuBack": "पिछले मेनू पर वापस जाएं",
+        "normal": "सामान्य",
+        "all": "ऑल",
+        "reset": "रीसेट",
+        "disabled": "अक्षम",
+        "enabled": "सक्षम",
+        "playNow": "अभी खेलें"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": "शदर",
+            "options": {
+                "disabled": "अक्षम",
+                "2xScaleHQ.glslp": "2xScaleHQ",
+                "4xScaleHQ.glslp": "4xScaleHQ",
+                "crt-easymode.glslp": "सीआरटी ईज़ीमोड",
+                "crt-aperture.glslp": "सीआरटी एपर्चर",
+                "crt-geom.glslp": "सीआरटी जियोम",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": "वर्चुअल गेमपैड",
+            "options": {
+                "disabled": "अक्षम",
+                "enabled": "सक्षम"
+            },
+            "default": "enabled"
+        }
+    },
     "Control Settings": "नियंत्रण सेटिंग्स",
-    "Cheats": "Cheats",
-    "Cache Manager": "कैश मैनेजर",
-    "Export Save File": "फ़ाइल सहेजें निर्यात करें",
-    "Import Save File": "सहेजें फ़ाइल आयात करें",
-    "Netplay": "कुल चालन",
-    "Mute": "आवाज़ बंद करना",
-    "Unmute": "अनम्यूट",
-    "Settings": "समायोजन",
-    "Enter Fullscreen": "पूर्ण स्क्रीन दर्ज करें",
-    "Exit Fullscreen": "पूर्ण स्क्रीन से बाहर निकलें",
-    "Reset": "रीसेट",
-    "Clear": "स्पष्ट",
-    "Close": "बंद करना",
-    "QUICK SAVE STATE": "त्वरित सहेजें राज्य",
-    "QUICK LOAD STATE": "त्वरित लोड स्थिति",
-    "CHANGE STATE SLOT": "स्टेट स्लॉट बदलें",
-    "FAST FORWARD": "तेजी से आगे बढ़ना",
-    "Player": "खिलाड़ी",
-    "Connected Gamepad": "कनेक्टेड गेमपैड",
-    "Gamepad": "गेमपैड",
-    "Keyboard": "कीबोर्ड",
-    "Set": "तय करना",
-    "Add Cheat": "धोखा जोड़ें",
-    "Create a Room": "एक कमरा बनाएँ",
-    "Rooms": "कमरा",
-    "Start Game": "खेल शुरू",
-    "Loading...": "लोड हो रहा है...",
-    "Download Game Core": "गेम कोर डाउनलोड करें",
-    "Decompress Game Core": "डीकंप्रेस गेम कोर",
-    "Download Game Data": "गेम डेटा डाउनलोड करें",
-    "Decompress Game Data": "गेम डेटा को डीकंप्रेस करें",
-    "Shaders": "शेडर्स",
-    "Disabled": "अक्षम",
-    "2xScaleHQ": "2xस्केलHQ",
-    "4xScaleHQ": "4xस्केलHQ",
-    "CRT easymode": "सीआरटी आसान मोड",
-    "CRT aperture": "सीआरटी एपर्चर",
-    "CRT geom": "सीआरटी जियोम",
-    "CRT mattias": "सीआरटी मैटियास",
-    "FPS": "एफपीएस",
-    "show": "दिखाओ",
-    "hide": "छिपाना",
-    "Fast Forward Ratio": "तेजी से आगे बढ़ने का अनुपात",
-    "Fast Forward": "तेजी से आगे बढ़ना",
-    "Enabled": "सक्रिय",
-    "Save State Slot": "राज्य स्लॉट सहेजें",
-    "Save State Location": "राज्य स्थान सहेजें",
-    "Download": "डाउनलोड करना",
-    "Keep in Browser": "ब्राउज़र में रखें",
-    "Auto": "ऑटो",
-    "NTSC": "एनटीएससी",
-    "PAL": "दोस्त",
-    "Dendy": "डेंडी",
-    "8:7 PAR": "8:7 बराबर",
-    "4:3": "4:3",
-    "Low": "कम",
-    "High": "उच्च",
-    "Very High": "बहुत ऊँचा",
-    "None": "कोई नहीं",
     "Player 1": "खिलाड़ी 1",
     "Player 2": "खिलाड़ी 2",
-    "Both": "दोनों",
-    "SAVED STATE TO SLOT": "स्लॉट के लिए राज्य सहेजा गया",
-    "LOADED STATE FROM SLOT": "स्लॉट से लोड किया गया राज्य",
-    "SET SAVE STATE SLOT TO": "सेव स्टेट स्लॉट को सेट करें",
-    "Network Error": "नेटवर्क त्रुटि",
-    "Submit": "जमा करना",
+    "Player 3": "खिलाड़ी 3",
+    "Player 4": "खिलाड़ी 4",
+    "Update": "अपडेट",
+    "Reset": "रीसेट",
+    "Clear": "साफ़ करें",
+    "Cancel": "रद्द करें",
+    "Close": "बंद",
+    "Empty": "खाली",
+    "Loading": "लोड हो रहा है",
+    "Submit": "सबमिट",
     "Description": "विवरण",
     "Code": "कोड",
-    "Add Cheat Code": "धोखा कोड जोड़ें",
-    "Leave Room": "कमरा छोड़ दो",
-    "Password": "पासवर्ड",
-    "Password (optional)": "पासवर्ड (वैकल्पिक)",
-    "Max Players": "अधिकतम खिलाड़ी",
+    "Add Cheat Code": "चीट कोड जोड़ें",
+    "OK": "ठीक है",
+    "Add Cheat": "धोखा जोड़ें",
+    "Cache Manager": "कैश मैनेजर",
+    "Press keyboard or gamepad": "कीबोर्ड या गेमपैड दबाएं",
+    "Gamepad": "गेमपैड",
+    "Keyboard": "कीबोर्ड",
+    "Set": "सेट",
+    "QUICK SAVE STATE": "क्विक सेव स्टेट",
+    "QUICK LOAD STATE": "त्वरित लोड स्थिति",
+    "CHANGE STATE SLOT": "राज्य स्लॉट बदलें",
+    "INSERT COIN": "इन्सर्ट कॉइन",
+    "Press escape (esc) to clear": "साफ़ करने के लिए एस्केप (esc) दबाएं",
+    "Netplay": "नेटप्ले",
+    "Rooms": "कमरे",
+    "Players": "खिलाड़ी",
+    "Player": "खिलाड़ी",
     "Room Name": "कमरे का नाम",
-    "Join": "जोड़ना",
+    "Password": "पासवर्ड",
+    "Name": "नाम",
+    "Quit Room": "छोड़ो कमरा",
+    "Create a Room": "एक कमरा बनाएं",
+    "Set Player Name": "सेट प्लेयर का नाम",
     "Player Name": "खिलाड़ी का नाम",
-    "Set Player Name": "खिलाड़ी का नाम सेट करें",
-    "Left Handed Mode": "बाएं हाथ का मोड",
-    "Virtual Gamepad": "वर्चुअल गेमपैड",
-    "Disk": "डिस्क",
-    "Press Keyboard": "कीबोर्ड दबाएँ",
-    "INSERT COIN": "सिक्का डालें",
-    "Remove": "निकालना",
-    "SAVE LOADED FROM BROWSER": "ब्राउज़र से लोड किया गया सेव करें",
-    "SAVE SAVED TO BROWSER": "ब्राउज़र में सहेजा गया सहेजें",
-    "Join the discord": "कलह में शामिल हों",
-    "View on GitHub": "GitHub पर देखें",
-    "Failed to start game": "गेम प्रारंभ करने में विफल",
-    "Download Game BIOS": "गेम BIOS डाउनलोड करें",
-    "Decompress Game BIOS": "डीकंप्रेस गेम BIOS",
-    "Download Game Parent": "गेम पेरेंट डाउनलोड करें",
-    "Decompress Game Parent": "डीकंप्रेस गेम पेरेंट",
-    "Download Game Patch": "गेम पैच डाउनलोड करें",
+    "Password (optional)": "पासवर्ड (वैकल्पिक)",
+    "Select": "चुनें",
+    "Start": "स्टार्ट",
+    "Menu": "मेनू",
+    "Decompress Game Core": "डिकंप्रेस गेम कोर",
+    "Decompress Game Data": "डिकंप्रेस गेम डेटा",
     "Decompress Game Patch": "डीकंप्रेस गेम पैच",
-    "Download Game State": "गेम स्टेट डाउनलोड करें",
-    "Check console": "कंसोल की जाँच करें",
-    "Error for site owner": "साइट स्वामी के लिए त्रुटि",
-    "EmulatorJS": "एम्यूलेटरजेएस",
-    "Clear All": "सभी साफ करें",
-    "Take Screenshot": "स्क्रीनशॉट लीजिये",
-    "Quick Save": "तत्काल बचत",
-    "Quick Load": "त्वरित लोड",
-    "REWIND": "अतीत",
-    "Rewind Enabled (requires restart)": "रिवाइंड सक्षम (पुनः आरंभ करने की आवश्यकता है)",
-    "Rewind Granularity": "ग्रैन्युलैरिटी को रिवाइंड करें",
-    "Slow Motion Ratio": "धीमी गति अनुपात",
-    "Slow Motion": "धीमी गति",
-    "Home": "घर",
-    "EmulatorJS License": "एम्यूलेटरजेएस लाइसेंस",
-    "RetroArch License": "रेट्रोआर्क लाइसेंस",
-    "SLOW MOTION": "धीमी गति",
-    "A": "ए",
-    "B": "बी",
-    "SELECT": "चुनना",
-    "START": "शुरू",
-    "UP": "ऊपर",
-    "DOWN": "नीचे",
-    "LEFT": "बाएं",
-    "RIGHT": "सही",
-    "X": "एक्स",
-    "Y": "वाई",
-    "L": "एल",
-    "R": "आर",
-    "Z": "जेड",
-    "STICK UP": "फैला होना",
-    "STICK DOWN": "चिपकाना",
-    "STICK LEFT": "बाईं ओर चिपकाएँ",
-    "STICK RIGHT": "दाएँ चिपकाएँ",
-    "C-PAD UP": "सी-पैड यूपी",
-    "C-PAD DOWN": "सी-पैड नीचे",
-    "C-PAD LEFT": "सी-पैड बचा",
-    "C-PAD RIGHT": "सी-पैड दाएँ",
-    "MICROPHONE": "माइक्रोफोन",
-    "BUTTON 1 / START": "बटन 1 / प्रारंभ करें",
-    "BUTTON 2": "बटन 2",
-    "BUTTON": "बटन",
-    "LEFT D-PAD UP": "डी-पैड ऊपर छोड़ दिया",
-    "LEFT D-PAD DOWN": "डी-पैड नीचे छोड़ दिया",
-    "LEFT D-PAD LEFT": "बायां डी-पैड बायां",
-    "LEFT D-PAD RIGHT": "बाएँ डी-पैड दाएँ",
-    "RIGHT D-PAD UP": "दायां डी-पैड ऊपर",
-    "RIGHT D-PAD DOWN": "दायां डी-पैड नीचे",
-    "RIGHT D-PAD LEFT": "दायां डी-पैड बायां",
-    "RIGHT D-PAD RIGHT": "दाएँ डी-पैड दाएँ",
-    "C": "सी",
-    "MODE": "तरीका",
-    "FIRE": "आग",
-    "RESET": "रीसेट",
-    "LEFT DIFFICULTY A": "बाएं कठिनाई ए",
-    "LEFT DIFFICULTY B": "बाएं कठिनाई बी",
-    "RIGHT DIFFICULTY A": "सही कठिनाई ए",
-    "RIGHT DIFFICULTY B": "सही कठिनाई बी",
-    "COLOR": "रंग",
-    "B/W": "बी/डब्ल्यू",
-    "PAUSE": "विराम",
-    "OPTION": "विकल्प",
-    "OPTION 1": "विकल्प 1",
-    "OPTION 2": "विकल्प 2",
-    "L2": "एल2",
-    "R2": "आर2",
-    "L3": "एल3",
-    "R3": "आर3",
-    "L STICK UP": "एल चिपक जाओ",
-    "L STICK DOWN": "एल चिपक जाओ",
-    "L STICK LEFT": "एल बाईं ओर चिपकाएँ",
-    "L STICK RIGHT": "एल दाईं ओर चिपकाएँ",
-    "R STICK UP": "आर चिपको",
-    "R STICK DOWN": "आर नीचे रहो",
-    "R STICK LEFT": "आर बाईं ओर चिपकाएँ",
-    "R STICK RIGHT": "आर दाईं ओर चिपकाएँ",
-    "Start": "शुरू",
-    "Select": "चुनना",
-    "Fast": "तेज़",
-    "Slow": "धीमा",
-    "a": "ए",
-    "b": "बी",
-    "c": "सी",
-    "d": "डी",
-    "e": "इ",
-    "f": "एफ",
-    "g": "जी",
-    "h": "एच",
-    "i": "मैं",
-    "j": "जे",
-    "k": "क",
-    "l": "एल",
-    "m": "एम",
-    "n": "एन",
-    "o": "हे",
-    "p": "पी",
-    "q": "क्यू",
-    "r": "आर",
-    "s": "एस",
-    "t": "टी",
-    "u": "यू",
-    "v": "वी",
-    "w": "डब्ल्यू",
-    "x": "एक्स",
-    "y": "य",
-    "z": "जेड",
-    "enter": "प्रवेश करना",
-    "escape": "पलायन",
-    "space": "अंतरिक्ष",
-    "tab": "टैब",
-    "backspace": "बैकस्पेस",
-    "delete": "मिटाना",
-    "arrowup": "ऊपरी तीर",
-    "arrowdown": "नीचे दर्शित तीर",
-    "arrowleft": "तीरबाएँ",
-    "arrowright": "तीर दाहिना",
-    "f1": "एफ1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "एफ4",
-    "f5": "f5",
-    "f6": "एफ6",
-    "f7": "f7",
-    "f8": "एफ8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "बदलाव",
-    "control": "नियंत्रण",
-    "alt": "वैकल्पिक",
-    "meta": "मेटा",
-    "capslock": "कैप्स लॉक",
-    "insert": "डालना",
-    "home": "घर",
-    "end": "अंत",
-    "pageup": "पेज अप",
-    "pagedown": "पेज नीचे",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "LEFT_STICK_X",
-    "LEFT_STICK_Y": "LEFT_STICK_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "RIGHT_STICK_Y",
-    "LEFT_TRIGGER": "LEFT_TRIGGER",
-    "RIGHT_TRIGGER": "RIGHT_TRIGGER",
-    "A_BUTTON": "एक बटन",
-    "B_BUTTON": "बी_बटन",
-    "X_BUTTON": "X_बटन",
-    "Y_BUTTON": "Y_बटन",
-    "START_BUTTON": "प्रारंभ करें बटन",
-    "SELECT_BUTTON": "SELECT_BUTTON",
-    "L1_BUTTON": "L1_बटन",
-    "R1_BUTTON": "R1_बटन",
-    "L2_BUTTON": "L2_बटन",
-    "R2_BUTTON": "R2_बटन",
-    "LEFT_THUMB_BUTTON": "LEFT_THUMB_बटन",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_बटन",
-    "DPAD_UP": "डीपीएडी_यूपी",
-    "DPAD_DOWN": "डीपीएडी_डाउन",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "डीपीएडी_दाएँ"
+    "Download Game Data": "गेम डेटा डाउनलोड करें",
+    "Download Game Core": "डाउनलोड गेम कोर",
+    "Network Error": "नेटवर्क त्रुटि",
+    "Default": "डिफ़ॉल्ट",
+    "default": "डिफ़ॉल्ट",
+    "Save State Location": "राज्य स्थान सहेजें",
+    "Save State Slot": "सेव स्टेट स्लॉट",
+    "Color Palette": "रंग पैलेट",
+    "No Sprite Limit": "कोई स्प्राइट सीमा नहीं",
+    "Enabled": "सक्षम",
+    "Disabled": "अक्षम",
+    "enabled": "सक्षम",
+    "disabled": "अक्षम",
+    "Low": "लो",
+    "High": "हाई",
+    "Very High": "वेरी हाई",
+    "4 Players Support": "4 खिलाड़ी समर्थन",
+    "Turbo Enable": "टर्बो सक्षम",
+    "None": "कोई नहीं",
+    "Both": "दोनों",
+    "Region": "क्षेत्र",
+    "SuperFX Overclock": "सुपरएफएक्स ओवरक्लॉक",
+    "Sound Quality": "ध्वनि गुणवत्ता",
+    "GB Colorization": "जीबी रंगीकरण",
+    "auto": "ऑटो",
+    "internal": "आंतरिक",
+    "Internal Palette": "आंतरिक पैलेट",
+    "GBC - Blue": "जीबीसी ब्लू",
+    "GBC - Brown": "जीबीसी ब्राउन",
+    "GBC - Dark Blue": "जीबीसी डार्क ब्लू",
+    "GBC - Dark Brown": "जीबीसी डार्क ब्राउन",
+    "GBC - Dark Green": "जीबीसी डार्क ग्रीन",
+    "GBC - Grayscale": "जीबीसी ग्रेस्केल",
+    "GBC - Green": "जीबीसी ग्रीन",
+    "GBC - Inverted": "जीबीसी उलटा",
+    "GBC - Orange": "जीबीसी ऑरेंज",
+    "GBC - Red": "जीबीसी रेड",
+    "GBC - Pastel Mix": "जीबीसी पेस्टल मिक्स",
+    "GBC - Yellow": "जीबीसी पीला",
+    "Frameskip": "फ्रेमस्किप",
+    "Solar sensor level": "सौर सेंसर स्तर",
+    "Enable Turbo Buttons": "टर्बो बटन सक्षम करें",
+    "Turbo Delay in frames": "फ्रेम में टर्बो विलंब",
+    "Auto": "ऑटो",
+    "Aspect Ratio (Need to refresh page)": "पहलू अनुपात (पेज को रीफ्रेश करने की आवश्यकता है)",
+    "16:9 Resolution": "16:9 संकल्प",
+    "4:3 Resolution": "4:3 संकल्प",
+    "Player 1 Pak": "खिलाड़ी 1 पाक",
+    "Player 2 Pak": "खिलाड़ी 2 पाक",
+    "Player 3 Pak": "खिलाड़ी 3 पाक",
+    "Player 4 Pak": "खिलाड़ी 4 पाक",
+    "none": "कोई नहीं",
+    "memory": "स्मृति",
+    "rumble": "रंबल",
+    "Screen layout": "स्क्रीन लेआउट",
+    "right/left": "दाएं/बाएं",
+    "left/right": "बाएं/दाएं",
+    "bottom/top": "नीचे/ऊपर",
+    "top/bottom": "ऊपर/नीचे",
+    "top only": "केवल शीर्ष",
+    "bottom only": "केवल नीचे",
+    "quick switch": "त्वरित स्विच",
+    "hybrid/bottom": "हाइब्रिड/बॉटम",
+    "hybrid/top": "हाइब्रिड/टॉप",
+    "Screen Rotation": "स्क्रीन रोटेशन",
+    "CPU speed": "सीपीयू स्पीड",
+    "Sound output": "ध्वनि आउटपुट",
+    "mono": "मोनो",
+    "stereo": "स्टीरियो",
+    "OFF": "ऑफ",
+    "ON": "ओएन",
+    "Fast Blitter": "फास्ट ब्लिटर",
+    "Bios": "बायोस",
+    "Enable second memory card": "दूसरा मेमोरी कार्ड सक्षम करें",
+    "Pad 1 Type": "पैड 1 प्रकार",
+    "Pad 2 Type": "पैड 2 प्रकार",
+    "Pad 3 Type": "पैड 3 प्रकार",
+    "Pad 4 Type": "पैड 4 प्रकार",
+    "standard": "मानक",
+    "analog": "एनालॉग",
+    "negcon": "नेगकॉन",
+    "Enable Vibration": "कंपन सक्षम करें",
+    "Enable interlacing mode(s)": "इंटरलेसिंग मोड सक्षम करें",
+    "Enhanced resolution (slow)": "उन्नत संकल्प (धीमा)",
+    "Enhanced resolution speed hack": "एन्हांस्ड रेजोल्यूशन स्पीड हैक",
+    "Aspect ratio": "पहलू अनुपात",
+    "CPU overclock": "सीपीयू ओवरक्लॉक",
+    "Force Neo Geo mode": "फोर्स नियो जियो मोड",
+    "Diagnostic Input": "नैदानिक ​​इनपुट",
+    "download": "डाउनलोड",
+    "keep in browser": "ब्राउज़र में रखें",
+    "Webassembly support is not detected in this browser": "इस ब्राउज़र में Webassembly समर्थन का पता नहीं चला है",
+    "Please upgrade your browser to the latest version": "कृपया अपने ब्राउज़र को नवीनतम संस्करण में अपग्रेड करें",
+    "Missing mame config": "मिसिंग मैम कॉन्फिग",
+    "Stop Screen Recording": "स्क्रीन रिकॉर्डिंग बंद करो",
+    "Start Screen Recording": "स्क्रीन रिकॉर्डिंग शुरू करें",
+    "Take Screenshot": "स्क्रीनशॉट लें",
+    "Quick Save": "क्विक सेव",
+    "Quick Load": "त्वरित लोड"
 }
