--- a/data/localization/ja-JA.json
+++ b/data/localization/ja-JA.json
@@ -1,301 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "再起動",
-    "Pause": "一時停止",
-    "Play": "遊ぶ",
-    "Save State": "状態を保存",
-    "Load State": "ロード状態",
-    "Control Settings": "コントロール設定",
-    "Cheats": "チート",
-    "Cache Manager": "キャッシュマネージャー",
-    "Export Save File": "保存ファイルのエクスポート",
-    "Import Save File": "保存ファイルのインポート",
-    "Netplay": "ネットプレイ",
-    "Mute": "ミュート",
-    "Unmute": "ミュートを解除する",
-    "Settings": "設定",
-    "Enter Fullscreen": "全画面表示に入る",
-    "Exit Fullscreen": "全画面表示を終了する",
+    "i18n": {
+        "restart": "再起動",
+        "play": "再生",
+        "pause": "一時停止",
+        "played": "再生",
+        "volume": "ボリューム",
+        "mute": "ミュート（F9）",
+        "unmute": "ミュート解除（F9）",
+        "enterFullscreen": "フルスクリーンに入る",
+        "exitFullscreen": "フルスクリーンで終了",
+        "settings": "設定",
+        "saveState": "状態の保存（Shift + F2）",
+        "loadState": "ロード状態（Shift + F4）",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "画面記録を開始します",
+        "netplay": "ネットプレイ",
+        "gamepad": "制御設定",
+        "cheat": "チート",
+        "menuBack": "前のメニューに戻る",
+        "normal": "通常",
+        "all": "すべて",
+        "reset": "リセット",
+        "disabled": "無効",
+        "enabled": "有効",
+        "playNow": "今すぐプレイ"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": "シェーダー",
+            "options": {
+                "disabled": "無効",
+                "2xScaleHQ.glslp": " 2xScaleHQ",
+                "4xScaleHQ.glslp": " 4xScaleHQ",
+                "crt-easymode.glslp": " CRTイージーモード",
+                "crt-aperture.glslp": " CRTアパーチャ",
+                "crt-geom.glslp": " CRTジオメトリ",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": "仮想ゲームパッド",
+            "options": {
+                "disabled": "無効",
+                "enabled": "有効"
+            },
+            "default": "enabled"
+        }
+    },
+    "Control Settings": "制御設定",
+    "Player 1": "プレーヤー1",
+    "Player 2": "プレーヤー2",
+    "Player 3": "プレーヤー3",
+    "Player 4": "プレーヤー4",
+    "Update": "更新",
     "Reset": "リセット",
     "Clear": "クリア",
-    "Close": "近い",
-    "QUICK SAVE STATE": "状態のクイック保存",
-    "QUICK LOAD STATE": "クイックロード状態",
-    "CHANGE STATE SLOT": "状態スロットの変更",
-    "FAST FORWARD": "早送り",
-    "Player": "プレーヤー",
-    "Connected Gamepad": "接続されたゲームパッド",
+    "Cancel": "キャンセル",
+    "Close": "閉じる",
+    "Empty": "空",
+    "Loading": "読み込み中",
+    "Submit": "送信する",
+    "Description": "説明",
+    "Code": "コード",
+    "Add Cheat Code": "チートコードを追加",
+    "OK": " OK",
+    "Add Cheat": "チートを追加",
+    "Cache Manager": "キャッシュマネージャー",
+    "Press keyboard or gamepad": "キーボードまたはゲームパッドを押す",
     "Gamepad": "ゲームパッド",
     "Keyboard": "キーボード",
     "Set": "セット",
-    "Add Cheat": "チートの追加",
-    "Create a Room": "ルームを作成する",
+    "QUICK SAVE STATE": "クイック保存状態",
+    "QUICK LOAD STATE": "クイックロード状態",
+    "CHANGE STATE SLOT": "状態スロットの変更",
+    "INSERT COIN": "コインを挿入",
+    "Press escape (esc) to clear": "エスケープ（esc）を押してクリアします",
+    "Netplay": "ネットプレイ",
     "Rooms": "部屋",
-    "Start Game": "ゲームをスタート",
-    "Loading...": "読み込み中...",
-    "Download Game Core": "ゲームコアをダウンロード",
-    "Decompress Game Core": "ゲームコアを解凍する",
-    "Download Game Data": "ゲームデータのダウンロード",
-    "Decompress Game Data": "ゲームデータを解凍する",
-    "Shaders": "シェーダ",
-    "Disabled": "無効",
-    "2xScaleHQ": "2xスケール本社",
-    "4xScaleHQ": "4xスケール本社",
-    "CRT easymode": "CRTイージーモード",
-    "CRT aperture": "CRTの絞り",
-    "CRT geom": "CRT ジオム",
-    "CRT mattias": "CRT マティアス",
-    "FPS": "FPS",
-    "show": "見せる",
-    "hide": "隠れる",
-    "Fast Forward Ratio": "早送り率",
-    "Fast Forward": "早送り",
-    "Enabled": "有効",
-    "Save State Slot": "状態保存スロット",
-    "Save State Location": "状態の保存場所",
-    "Download": "ダウンロード",
-    "Keep in Browser": "ブラウザ内に保持",
-    "Auto": "自動",
-    "NTSC": "NTSC",
-    "PAL": "パル",
-    "Dendy": "デンディ",
-    "8:7 PAR": "8:7 パー",
-    "4:3": "4:3",
-    "Low": "低い",
-    "High": "高い",
-    "Very High": "すごく高い",
-    "None": "なし",
-    "Player 1": "プレイヤー 1",
-    "Player 2": "プレイヤー2",
-    "Both": "両方",
-    "SAVED STATE TO SLOT": "状態をスロットに保存しました",
-    "LOADED STATE FROM SLOT": "スロットからロードされた状態",
-    "SET SAVE STATE SLOT TO": "状態保存スロットを次のように設定します",
-    "Network Error": "ネットワークエラー",
-    "Submit": "提出する",
-    "Description": "説明",
-    "Code": "コード",
-    "Add Cheat Code": "チートコードを追加する",
-    "Leave Room": "部屋を出る",
+    "Players": "プレイヤー",
+    "Player": "プレーヤー",
+    "Room Name": "部屋名",
     "Password": "パスワード",
-    "Password (optional)": "パスワード (オプション)",
-    "Max Players": "最大プレイヤー数",
-    "Room Name": "部屋の名前",
-    "Join": "参加する",
-    "Player Name": "プレーヤの名前",
-    "Set Player Name": "プレイヤー名の設定",
-    "Left Handed Mode": "左利きモード",
-    "Virtual Gamepad": "仮想ゲームパッド",
-    "Disk": "ディスク",
-    "Press Keyboard": "キーボードを押す",
-    "INSERT COIN": "コインを入れる",
-    "Remove": "取り除く",
-    "SAVE LOADED FROM BROWSER": "ブラウザからロードして保存",
-    "SAVE SAVED TO BROWSER": "保存 ブラウザに保存",
-    "Join the discord": "ディスコードに参加する",
-    "View on GitHub": "GitHub で見る",
-    "Failed to start game": "ゲームの開始に失敗しました",
-    "Download Game BIOS": "ゲーム BIOS をダウンロードする",
-    "Decompress Game BIOS": "ゲーム BIOS を解凍する",
-    "Download Game Parent": "ゲームの親をダウンロード",
-    "Decompress Game Parent": "ゲームの親を解凍する",
-    "Download Game Patch": "ゲームパッチをダウンロード",
-    "Decompress Game Patch": "ゲームパッチを解凍する",
-    "Download Game State": "ゲームステートのダウンロード",
-    "Check console": "コンソールを確認してください",
-    "Error for site owner": "サイト所有者のエラー",
-    "EmulatorJS": "エミュレータJS",
-    "Clear All": "すべてクリア",
-    "Take Screenshot": "スクリーンショットを撮ります",
-    "Quick Save": "クイックセーブ",
-    "Quick Load": "クイックロード",
-    "REWIND": "巻き戻し",
-    "Rewind Enabled (requires restart)": "巻き戻しが有効 (再起動が必要)",
-    "Rewind Granularity": "巻き戻し粒度",
-    "Slow Motion Ratio": "スローモーション比率",
-    "Slow Motion": "スローモーション",
-    "Home": "家",
-    "EmulatorJS License": "エミュレータJSライセンス",
-    "RetroArch License": "RetroArch ライセンス",
-    "SLOW MOTION": "スローモーション",
-    "A": "あ",
-    "B": "B",
-    "SELECT": "選択する",
-    "START": "始める",
-    "UP": "上",
-    "DOWN": "下",
-    "LEFT": "左",
-    "RIGHT": "右",
-    "X": "バツ",
-    "Y": "Y",
-    "L": "L",
-    "R": "R",
-    "Z": "Z",
-    "STICK UP": "上に突き出る",
-    "STICK DOWN": "スティックダウン",
-    "STICK LEFT": "左スティック",
-    "STICK RIGHT": "右スティック",
-    "C-PAD UP": "Cパッドアップ",
-    "C-PAD DOWN": "C-パッドを下へ",
-    "C-PAD LEFT": "C-パッド左",
-    "C-PAD RIGHT": "Cパッド右",
-    "MICROPHONE": "マイクロフォン",
-    "BUTTON 1 / START": "ボタン 1 / スタート",
-    "BUTTON 2": "ボタン2",
-    "BUTTON": "ボタン",
-    "LEFT D-PAD UP": "左方向パッドを上に",
-    "LEFT D-PAD DOWN": "左方向パッド下",
-    "LEFT D-PAD LEFT": "左十字キー左",
-    "LEFT D-PAD RIGHT": "左十字キー右",
-    "RIGHT D-PAD UP": "右方向パッド上",
-    "RIGHT D-PAD DOWN": "右方向パッド下",
-    "RIGHT D-PAD LEFT": "右十字キー左",
-    "RIGHT D-PAD RIGHT": "右十字キー右",
-    "C": "C",
-    "MODE": "モード",
-    "FIRE": "火",
-    "RESET": "リセット",
-    "LEFT DIFFICULTY A": "左の難易度A",
-    "LEFT DIFFICULTY B": "左の難易度B",
-    "RIGHT DIFFICULTY A": "右の難易度A",
-    "RIGHT DIFFICULTY B": "右の難易度B",
-    "COLOR": "色",
-    "B/W": "白黒",
-    "PAUSE": "一時停止",
-    "OPTION": "オプション",
-    "OPTION 1": "オプション1",
-    "OPTION 2": "オプション 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "Lスティックアップ",
-    "L STICK DOWN": "Lスティックダウン",
-    "L STICK LEFT": "Lスティック左",
-    "L STICK RIGHT": "Lスティック右",
-    "R STICK UP": "Rスティックアップ",
-    "R STICK DOWN": "Rスティックダウン",
-    "R STICK LEFT": "Rスティック左",
-    "R STICK RIGHT": "R右スティック",
-    "Start": "始める",
-    "Select": "選択する",
-    "Fast": "速い",
-    "Slow": "遅い",
-    "a": "ある",
-    "b": "b",
-    "c": "c",
-    "d": "d",
-    "e": "e",
-    "f": "f",
-    "g": "g",
-    "h": "h",
-    "i": "私",
-    "j": "j",
-    "k": "k",
-    "l": "私",
-    "m": "メートル",
-    "n": "n",
-    "o": "ああ",
-    "p": "p",
-    "q": "q",
-    "r": "r",
-    "s": "s",
-    "t": "t",
-    "u": "あなた",
-    "v": "v",
-    "w": "w",
-    "x": "バツ",
-    "y": "y",
-    "z": "z",
-    "enter": "入力",
-    "escape": "逃げる",
-    "space": "空間",
-    "tab": "タブ",
-    "backspace": "バックスペース",
-    "delete": "消去",
-    "arrowup": "アローアップ",
-    "arrowdown": "矢印",
-    "arrowleft": "矢印左",
-    "arrowright": "右矢印",
-    "f1": "f1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "f6",
-    "f7": "f7",
-    "f8": "f8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "シフト",
-    "control": "コントロール",
-    "alt": "代替",
-    "meta": "メタ",
-    "capslock": "キャップスロック",
-    "insert": "入れる",
-    "home": "家",
-    "end": "終わり",
-    "pageup": "ページアップ",
-    "pagedown": "ページダウン",
-    "!": "！",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "】",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "」",
-    ",": "、",
-    ".": "。",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "LEFT_STICK_X",
-    "LEFT_STICK_Y": "左スティック_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "右スティック_Y",
-    "LEFT_TRIGGER": "LEFT_TRIGGER",
-    "RIGHT_TRIGGER": "右トリガー",
-    "A_BUTTON": "ボタン",
-    "B_BUTTON": "B_ボタン",
-    "X_BUTTON": "X_ボタン",
-    "Y_BUTTON": "Y_ボタン",
-    "START_BUTTON": "スタートボタン",
-    "SELECT_BUTTON": "SELECT_BUTTON",
-    "L1_BUTTON": "L1_ボタン",
-    "R1_BUTTON": "R1_ボタン",
-    "L2_BUTTON": "L2_ボタン",
-    "R2_BUTTON": "R2_ボタン",
-    "LEFT_THUMB_BUTTON": "LEFT_THUMB_BUTTON",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_BUTTON",
-    "DPAD_UP": "DPAD_UP",
-    "DPAD_DOWN": "DPAD_DOWN",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "DPAD_RIGHT"
+    "Name": "名前",
+    "Quit Room": "終了室",
+    "Create a Room": "部屋を作成する",
+    "Set Player Name": "プレイヤー名を設定する",
+    "Player Name": "プレイヤー名",
+    "Password (optional)": "パスワード（オプション）",
+    "Select": "選択",
+    "Start": "開始",
+    "Menu": "メニュー",
+    "Decompress Game Core": "ゲームコアを解凍します",
+    "Decompress Game Data": "ゲームデータの解凍",
+    "Decompress Game Patch": "ゲームパッチの解凍",
+    "Download Game Data": "ゲームデータをダウンロードする",
+    "Download Game Core": "ゲームコアをダウンロード",
+    "Network Error": "ネットワークエラー",
+    "Default": "デフォルト",
+    "default": "デフォルト",
+    "Save State Location": "州の場所を保存",
+    "Save State Slot": "状態スロットを保存",
+    "Color Palette": "カラーパレット",
+    "No Sprite Limit": "スプライト制限なし",
+    "Enabled": "有効",
+    "Disabled": "無効",
+    "enabled": "有効",
+    "disabled": "無効",
+    "Low": "低",
+    "High": "高",
+    "Very High": "非常に高い",
+    "4 Players Support": " 4人のプレイヤーのサポート",
+    "Turbo Enable": "ターボイネーブル",
+    "None": "なし",
+    "Both": "両方",
+    "Region": "地域",
+    "SuperFX Overclock": " SuperFXオーバークロック",
+    "Sound Quality": "音質",
+    "GB Colorization": " GBカラー化",
+    "auto": "自動",
+    "internal": "内部",
+    "Internal Palette": "内部パレット",
+    "GBC - Blue": " GBCブルー",
+    "GBC - Brown": " GBCブラウン",
+    "GBC - Dark Blue": " GBCダークブルー",
+    "GBC - Dark Brown": " GBCダークブラウン",
+    "GBC - Dark Green": " GBCダークグリーン",
+    "GBC - Grayscale": " GBCグレースケール",
+    "GBC - Green": " GBCグリーン",
+    "GBC - Inverted": " GBC反転",
+    "GBC - Orange": " GBCオレンジ",
+    "GBC - Red": " GBCレッド",
+    "GBC - Pastel Mix": " GBCパステルミックス",
+    "GBC - Yellow": " GBCイエロー",
+    "Frameskip": "フレームスキップ",
+    "Solar sensor level": "ソーラーセンサーレベル",
+    "Enable Turbo Buttons": "ターボボタンを有効にする",
+    "Turbo Delay in frames": "フレームのターボ遅延",
+    "Auto": "自動",
+    "Aspect Ratio (Need to refresh page)": "アスペクト比（ページを更新する必要があります）",
+    "16:9 Resolution": " 16：9解像度",
+    "4:3 Resolution": " 4：3解像度",
+    "Player 1 Pak": "プレーヤー1パック",
+    "Player 2 Pak": "プレーヤー2パック",
+    "Player 3 Pak": "プレーヤー3パック",
+    "Player 4 Pak": "プレーヤー4パック",
+    "none": "なし",
+    "memory": "メモリ",
+    "rumble": "ランブル",
+    "Screen layout": "画面レイアウト",
+    "right/left": "右/左",
+    "left/right": "左/右",
+    "bottom/top": "下/上",
+    "top/bottom": "上/下",
+    "top only": "トップのみ",
+    "bottom only": "下のみ",
+    "quick switch": "クイックスイッチ",
+    "hybrid/bottom": "ハイブリッド/ボトム",
+    "hybrid/top": "ハイブリッド/トップ",
+    "Screen Rotation": "画面の回転",
+    "CPU speed": " CPU速度",
+    "Sound output": "サウンド出力",
+    "mono": "モノ",
+    "stereo": "ステレオ",
+    "OFF": "オフ",
+    "ON": "オン",
+    "Fast Blitter": "高速ブリッター",
+    "Bios": " BIOS",
+    "Enable second memory card": " 2番目のメモリカードを有効にする",
+    "Pad 1 Type": "パッド1タイプ",
+    "Pad 2 Type": "パッド2タイプ",
+    "Pad 3 Type": "パッド3タイプ",
+    "Pad 4 Type": "パッド4タイプ",
+    "standard": "標準",
+    "analog": "アナログ",
+    "negcon": "ネジコン",
+    "Enable Vibration": "バイブレーションを有効にする",
+    "Enable interlacing mode(s)": "インターレースモードを有効にする",
+    "Enhanced resolution (slow)": "強化された解像度（遅い）",
+    "Enhanced resolution speed hack": "強化された解決速度ハック",
+    "Aspect ratio": "アスペクト比",
+    "CPU overclock": " CPUオーバークロック",
+    "Force Neo Geo mode": "強制ネオジオモード",
+    "Diagnostic Input": "診断入力",
+    "download": "ダウンロード",
+    "keep in browser": "ブラウザにとどまる",
+    "Webassembly support is not detected in this browser": "このブラウザではWebAssemblyのサポートが検出されません",
+    "Please upgrade your browser to the latest version": "ブラウザを最新バージョンにアップグレードしてください",
+    "Missing mame config": " mameconfigがありません",
+    "Stop Screen Recording": "画面の記録を停止します",
+    "Start Screen Recording": "画面記録を開始します",
+    "Take Screenshot": "スクリーンショットを撮る",
+    "Quick Save": "クイック保存",
+    "Quick Load": "クイックロード"
 }
