--- a/data/localization/ko-KO.json
+++ b/data/localization/ko-KO.json
@@ -1,301 +1,196 @@
 {
-    "0": "0",
-    "1": "1",
-    "2": "2",
-    "3": "삼",
-    "4": "4",
-    "5": "5",
-    "6": "6",
-    "7": "7",
-    "8": "8",
-    "9": "9",
-    "Restart": "재시작",
-    "Pause": "정지시키다",
-    "Play": "놀다",
-    "Save State": "상태 저장",
-    "Load State": "로드 상태",
+    "i18n": {
+        "restart": "재시작",
+        "play": "플레이",
+        "pause": "일시 중지",
+        "played": "플레이",
+        "volume": "볼륨",
+        "mute": "음소거(F9)",
+        "unmute": "음소거 해제(F9)",
+        "enterFullscreen": "전체 화면으로 전환",
+        "exitFullscreen": "전체 화면 종료",
+        "settings": "설정",
+        "saveState": "상태 저장(Shift + F2)",
+        "loadState": "로드 상태(Shift + F4)",
+        "cacheManager": "Cache Manager",
+        "screenRecord": "화면 녹화 시작",
+        "netplay": "넷플레이",
+        "gamepad": "제어 설정",
+        "cheat": "치트",
+        "menuBack": "이전 메뉴로 돌아가기",
+        "normal": "일반",
+        "all": "모두",
+        "reset": "리셋",
+        "disabled": "장애인",
+        "enabled": "활성화됨",
+        "playNow": "지금 플레이"
+    },
+    "normalOptions": {
+        "shader": {
+            "label": "쉐이더",
+            "options": {
+                "disabled": "장애인",
+                "2xScaleHQ.glslp": "2xScaleHQ",
+                "4xScaleHQ.glslp": "4xScaleHQ",
+                "crt-easymode.glslp": "CRT 이지모드",
+                "crt-aperture.glslp": "CRT 조리개",
+                "crt-geom.glslp": "CRT 지오메트리",
+                "crt-mattias.glslp": "CRT mattias"
+            },
+            "default": "disabled"
+        },
+        "virtual-gamepad": {
+            "label": "가상 게임패드",
+            "options": {
+                "disabled": "장애인",
+                "enabled": "활성화됨"
+            },
+            "default": "enabled"
+        }
+    },
     "Control Settings": "제어 설정",
-    "Cheats": "치트",
+    "Player 1": "플레이어 1",
+    "Player 2": "플레이어 2",
+    "Player 3": "플레이어 3",
+    "Player 4": "플레이어 4",
+    "Update": "업데이트",
+    "Reset": "리셋",
+    "Clear": "클리어",
+    "Cancel": "취소",
+    "Close": "닫기",
+    "Empty": "비어 있음",
+    "Loading": "로드 중",
+    "Submit": "제출",
+    "Description": "설명",
+    "Code": "코드",
+    "Add Cheat Code": "치트 코드 추가",
+    "OK": "알았어",
+    "Add Cheat": "치트 추가",
     "Cache Manager": "캐시 관리자",
-    "Export Save File": "저장 파일 내보내기",
-    "Import Save File": "저장 파일 가져오기",
-    "Netplay": "넷플레이",
-    "Mute": "무음",
-    "Unmute": "음소거 해제",
-    "Settings": "설정",
-    "Enter Fullscreen": "전체 화면 시작",
-    "Exit Fullscreen": "전체화면 종료",
-    "Reset": "초기화",
-    "Clear": "분명한",
-    "Close": "닫다",
+    "Press keyboard or gamepad": "키보드 또는 게임패드 누르기",
+    "Gamepad": "게임패드",
+    "Keyboard": "키보드",
+    "Set": "세트",
     "QUICK SAVE STATE": "빠른 저장 상태",
     "QUICK LOAD STATE": "빠른 로드 상태",
     "CHANGE STATE SLOT": "상태 슬롯 변경",
-    "FAST FORWARD": "빨리 감기",
-    "Player": "플레이어",
-    "Connected Gamepad": "연결된 게임패드",
-    "Gamepad": "게임패드",
-    "Keyboard": "건반",
-    "Set": "세트",
-    "Add Cheat": "치트 추가",
-    "Create a Room": "방 만들기",
+    "INSERT COIN": "코인 삽입",
+    "Press escape (esc) to clear": "이스케이프(esc)를 눌러 지우십시오.",
+    "Netplay": "넷플레이",
     "Rooms": "객실",
-    "Start Game": "게임을 시작하다",
-    "Loading...": "로드 중...",
-    "Download Game Core": "게임 코어 다운로드",
-    "Decompress Game Core": "게임 코어 압축 해제",
-    "Download Game Data": "게임 데이터 다운로드",
-    "Decompress Game Data": "게임 데이터 압축 해제",
-    "Shaders": "셰이더",
-    "Disabled": "장애가 있는",
-    "2xScaleHQ": "2xScaleHQ",
-    "4xScaleHQ": "4xScaleHQ",
-    "CRT easymode": "브라운관 이지모드",
-    "CRT aperture": "CRT 조리개",
-    "CRT geom": "브라운관 검",
-    "CRT mattias": "CRT 마티아스",
-    "FPS": "FPS",
-    "show": "보여주다",
-    "hide": "숨다",
-    "Fast Forward Ratio": "빨리 감기 비율",
-    "Fast Forward": "빨리 감기",
-    "Enabled": "사용",
-    "Save State Slot": "상태 슬롯 저장",
-    "Save State Location": "상태 위치 저장",
-    "Download": "다운로드",
-    "Keep in Browser": "브라우저에 보관",
-    "Auto": "자동",
-    "NTSC": "NTSC",
-    "PAL": "단짝",
-    "Dendy": "덴디",
-    "8:7 PAR": "8:7 동점",
-    "4:3": "4:3",
-    "Low": "낮은",
-    "High": "높은",
-    "Very High": "매우 높음",
-    "None": "없음",
-    "Player 1": "플레이어 1",
-    "Player 2": "플레이어 2",
-    "Both": "둘 다",
-    "SAVED STATE TO SLOT": "슬롯에 저장된 상태",
-    "LOADED STATE FROM SLOT": "슬롯에서 로드된 상태",
-    "SET SAVE STATE SLOT TO": "저장 상태 슬롯을 다음으로 설정",
-    "Network Error": "네트워크 오류",
-    "Submit": "제출하다",
-    "Description": "설명",
-    "Code": "암호",
-    "Add Cheat Code": "치트 코드 추가",
-    "Leave Room": "방 나가기",
-    "Password": "비밀번호",
-    "Password (optional)": "비밀번호(선택 사항)",
-    "Max Players": "최대 플레이어",
+    "Players": "선수",
+    "Player": "플레이어",
     "Room Name": "방 이름",
-    "Join": "가입하다",
-    "Player Name": "선수 이름",
+    "Password": "비밀번호",
+    "Name": "이름",
+    "Quit Room": "퇴장실",
+    "Create a Room": "방 만들기",
     "Set Player Name": "플레이어 이름 설정",
-    "Left Handed Mode": "왼손잡이 모드",
-    "Virtual Gamepad": "가상 게임패드",
-    "Disk": "디스크",
-    "Press Keyboard": "키보드 누르기",
-    "INSERT COIN": "동전을 넣으세요",
-    "Remove": "제거하다",
-    "SAVE LOADED FROM BROWSER": "브라우저에서 불러온 저장",
-    "SAVE SAVED TO BROWSER": "저장 브라우저에 저장됨",
-    "Join the discord": "불화에 동참하십시오",
-    "View on GitHub": "GitHub에서 보기",
-    "Failed to start game": "게임을 시작하지 못했습니다.",
-    "Download Game BIOS": "게임 BIOS 다운로드",
-    "Decompress Game BIOS": "게임 BIOS 압축 해제",
-    "Download Game Parent": "게임 부모 다운로드",
-    "Decompress Game Parent": "게임 부모 압축 해제",
-    "Download Game Patch": "게임 패치 다운로드",
-    "Decompress Game Patch": "게임 패치 압축 해제",
-    "Download Game State": "게임 상태 다운로드",
-    "Check console": "콘솔 확인",
-    "Error for site owner": "사이트 소유자 오류",
-    "EmulatorJS": "EmulatorJS",
-    "Clear All": "모두 지우기",
-    "Take Screenshot": "스크린 샷을 찍다",
-    "Quick Save": "빠른 저장",
-    "Quick Load": "빠른 로드",
-    "REWIND": "되감기",
-    "Rewind Enabled (requires restart)": "되감기 활성화됨(다시 시작해야 함)",
-    "Rewind Granularity": "되감기 세분성",
-    "Slow Motion Ratio": "슬로우 모션 비율",
-    "Slow Motion": "느린",
-    "Home": "집",
-    "EmulatorJS License": "EmulatorJS 라이선스",
-    "RetroArch License": "레트로아크 라이선스",
-    "SLOW MOTION": "느린",
-    "A": "ㅏ",
-    "B": "비",
-    "SELECT": "선택하다",
-    "START": "시작",
-    "UP": "위로",
-    "DOWN": "아래에",
-    "LEFT": "왼쪽",
-    "RIGHT": "오른쪽",
-    "X": "엑스",
-    "Y": "와이",
-    "L": "엘",
-    "R": "아르 자형",
-    "Z": "지",
-    "STICK UP": "스틱 업",
-    "STICK DOWN": "스틱 다운",
-    "STICK LEFT": "스틱 왼쪽",
-    "STICK RIGHT": "스틱 오른쪽",
-    "C-PAD UP": "C 패드 위로",
-    "C-PAD DOWN": "C패드 다운",
-    "C-PAD LEFT": "C 패드 왼쪽",
-    "C-PAD RIGHT": "C 패드 오른쪽",
-    "MICROPHONE": "마이크로폰",
-    "BUTTON 1 / START": "버튼 1 / 시작",
-    "BUTTON 2": "버튼 2",
-    "BUTTON": "단추",
-    "LEFT D-PAD UP": "왼쪽 방향 패드 위로",
-    "LEFT D-PAD DOWN": "왼쪽 방향 패드 아래로",
-    "LEFT D-PAD LEFT": "왼쪽 방향 패드 왼쪽",
-    "LEFT D-PAD RIGHT": "왼쪽 방향 패드 오른쪽",
-    "RIGHT D-PAD UP": "오른쪽 방향 패드 위로",
-    "RIGHT D-PAD DOWN": "오른쪽 방향 패드 아래로",
-    "RIGHT D-PAD LEFT": "오른쪽 방향 패드 왼쪽",
-    "RIGHT D-PAD RIGHT": "오른쪽 방향 패드 오른쪽",
-    "C": "씨",
-    "MODE": "방법",
-    "FIRE": "불",
-    "RESET": "초기화",
-    "LEFT DIFFICULTY A": "왼쪽 난이도 A",
-    "LEFT DIFFICULTY B": "왼쪽 난이도 B",
-    "RIGHT DIFFICULTY A": "오른쪽 난이도 A",
-    "RIGHT DIFFICULTY B": "오른쪽 난이도 B",
-    "COLOR": "색상",
-    "B/W": "흑백",
-    "PAUSE": "정지시키다",
-    "OPTION": "옵션",
-    "OPTION 1": "옵션 1",
-    "OPTION 2": "옵션 2",
-    "L2": "L2",
-    "R2": "R2",
-    "L3": "L3",
-    "R3": "R3",
-    "L STICK UP": "L 스틱 업",
-    "L STICK DOWN": "L 스틱 다운",
-    "L STICK LEFT": "왼쪽 스틱",
-    "L STICK RIGHT": "L 오른쪽 스틱",
-    "R STICK UP": "R 스틱 업",
-    "R STICK DOWN": "R 스틱 다운",
-    "R STICK LEFT": "R 스틱 왼쪽",
-    "R STICK RIGHT": "R 오른쪽 스틱",
+    "Player Name": "플레이어 이름",
+    "Password (optional)": "비밀번호(선택사항)",
+    "Select": "선택",
     "Start": "시작",
-    "Select": "선택하다",
-    "Fast": "빠른",
-    "Slow": "느린",
-    "a": "ㅏ",
-    "b": "비",
-    "c": "씨",
-    "d": "디",
-    "e": "이자형",
-    "f": "에프",
-    "g": "g",
-    "h": "시간",
-    "i": "나",
-    "j": "제이",
-    "k": "케이",
-    "l": "엘",
-    "m": "중",
-    "n": "N",
-    "o": "영형",
-    "p": "피",
-    "q": "큐",
-    "r": "아르 자형",
-    "s": "에스",
-    "t": "티",
-    "u": "유",
-    "v": "V",
-    "w": "승",
-    "x": "엑스",
-    "y": "와이",
-    "z": "지",
-    "enter": "입력하다",
-    "escape": "탈출하다",
-    "space": "공간",
-    "tab": "탭",
-    "backspace": "역행 키이",
-    "delete": "삭제",
-    "arrowup": "화살촉",
-    "arrowdown": "화살표 방향",
-    "arrowleft": "왼쪽 화살표",
-    "arrowright": "오른쪽 화살표",
-    "f1": "f1",
-    "f2": "f2",
-    "f3": "f3",
-    "f4": "f4",
-    "f5": "f5",
-    "f6": "f6",
-    "f7": "f7",
-    "f8": "f8",
-    "f9": "f9",
-    "f10": "f10",
-    "f11": "f11",
-    "f12": "f12",
-    "shift": "옮기다",
-    "control": "제어",
-    "alt": "대안",
-    "meta": "메타",
-    "capslock": "캡스락",
-    "insert": "끼워 넣다",
-    "home": "집",
-    "end": "끝",
-    "pageup": "페이지 위로",
-    "pagedown": "페이지 다운",
-    "!": "!",
-    "@": "@",
-    "#": "#",
-    "$": "$",
-    "%": "%",
-    "^": "^^",
-    "&": "&",
-    "*": "*",
-    "(": "(",
-    ")": ")",
-    "-": "-",
-    "_": "_",
-    "+": "+",
-    "=": "=",
-    "[": "[",
-    "]": "]",
-    "{": "{",
-    "}": "}",
-    ";": ";",
-    ":": ":",
-    "'": "'",
-    "\"": "\"",
-    ",": ",",
-    ".": ".",
-    "<": "<",
-    ">": ">",
-    "/": "/",
-    "?": "?",
-    "LEFT_STICK_X": "왼쪽_스틱_X",
-    "LEFT_STICK_Y": "왼쪽_스틱_Y",
-    "RIGHT_STICK_X": "RIGHT_STICK_X",
-    "RIGHT_STICK_Y": "오른쪽_스틱_Y",
-    "LEFT_TRIGGER": "왼쪽_트리거",
-    "RIGHT_TRIGGER": "RIGHT_TRIGGER",
-    "A_BUTTON": "단추",
-    "B_BUTTON": "B_버튼",
-    "X_BUTTON": "X_버튼",
-    "Y_BUTTON": "Y_버튼",
-    "START_BUTTON": "시작 버튼",
-    "SELECT_BUTTON": "선택_버튼",
-    "L1_BUTTON": "L1_버튼",
-    "R1_BUTTON": "R1_버튼",
-    "L2_BUTTON": "L2_버튼",
-    "R2_BUTTON": "R2_버튼",
-    "LEFT_THUMB_BUTTON": "LEFT_THUMB_BUTTON",
-    "RIGHT_THUMB_BUTTON": "RIGHT_THUMB_BUTTON",
-    "DPAD_UP": "DPAD_UP",
-    "DPAD_DOWN": "DPAD_DOWN",
-    "DPAD_LEFT": "DPAD_LEFT",
-    "DPAD_RIGHT": "DPAD_RIGHT"
+    "Menu": "메뉴",
+    "Decompress Game Core": "게임 코어 압축 풀기",
+    "Decompress Game Data": "게임 데이터 압축 풀기",
+    "Decompress Game Patch": "게임 패치 압축 풀기",
+    "Download Game Data": "게임 데이터 다운로드",
+    "Download Game Core": "게임 코어 다운로드",
+    "Network Error": "네트워크 오류",
+    "Default": "기본값",
+    "default": "기본값",
+    "Save State Location": "상태 위치 저장",
+    "Save State Slot": "상태 슬롯 저장",
+    "Color Palette": "컬러 팔레트",
+    "No Sprite Limit": "스프라이트 제한 없음",
+    "Enabled": "활성화됨",
+    "Disabled": "장애인",
+    "enabled": "활성화",
+    "disabled": "장애인",
+    "Low": "낮음",
+    "High": "높음",
+    "Very High": "매우 높음",
+    "4 Players Support": "4인 지원",
+    "Turbo Enable": "터보 활성화",
+    "None": "없음",
+    "Both": "둘다",
+    "Region": "지역",
+    "SuperFX Overclock": "SuperFX 오버클럭",
+    "Sound Quality": "음질",
+    "GB Colorization": "GB 채색",
+    "auto": "자동",
+    "internal": "내부",
+    "Internal Palette": "내부 팔레트",
+    "GBC - Blue": "GBC 블루",
+    "GBC - Brown": "GBC 브라운",
+    "GBC - Dark Blue": "GBC 다크 블루",
+    "GBC - Dark Brown": "GBC 다크 브라운",
+    "GBC - Dark Green": "GBC 다크 그린",
+    "GBC - Grayscale": "GBC 그레이스케일",
+    "GBC - Green": "GBC 그린",
+    "GBC - Inverted": "GBC 반전",
+    "GBC - Orange": "GBC 오렌지",
+    "GBC - Red": "GBC 레드",
+    "GBC - Pastel Mix": "GBC 파스텔 믹스",
+    "GBC - Yellow": "GBC 옐로우",
+    "Frameskip": "프레임스킵",
+    "Solar sensor level": "태양광 센서 레벨",
+    "Enable Turbo Buttons": "터보 버튼 활성화",
+    "Turbo Delay in frames": "프레임의 터보 지연",
+    "Auto": "자동",
+    "Aspect Ratio (Need to refresh page)": "종횡비(페이지 새로고침 필요)",
+    "16:9 Resolution": "16:9 해상도",
+    "4:3 Resolution": "4:3 해상도",
+    "Player 1 Pak": "플레이어 1 박",
+    "Player 2 Pak": "플레이어 2 박",
+    "Player 3 Pak": "플레이어 3 박",
+    "Player 4 Pak": "플레이어 4 박",
+    "none": "없음",
+    "memory": "기억",
+    "rumble": "럼블",
+    "Screen layout": "화면 레이아웃",
+    "right/left": "오른쪽/왼쪽",
+    "left/right": "왼쪽/오른쪽",
+    "bottom/top": "하단/상단",
+    "top/bottom": "위/아래",
+    "top only": "상단만",
+    "bottom only": "하단만",
+    "quick switch": "빠른 전환",
+    "hybrid/bottom": "하이브리드/하단",
+    "hybrid/top": "하이브리드/탑",
+    "Screen Rotation": "화면 회전",
+    "CPU speed": "CPU 속도",
+    "Sound output": "음향 출력",
+    "mono": "모노",
+    "stereo": "스테레오",
+    "OFF": "꺼짐",
+    "ON": "켜기",
+    "Fast Blitter": "빠른 블리터",
+    "Bios": "바이오스",
+    "Enable second memory card": "두 번째 메모리 카드 활성화",
+    "Pad 1 Type": "패드 1종",
+    "Pad 2 Type": "패드 2형",
+    "Pad 3 Type": "패드 3종",
+    "Pad 4 Type": "패드 4종",
+    "standard": "표준",
+    "analog": "아날로그",
+    "negcon": "네그콘",
+    "Enable Vibration": "진동 활성화",
+    "Enable interlacing mode(s)": "인터레이스 모드 활성화",
+    "Enhanced resolution (slow)": "향상된 해상도(느림)",
+    "Enhanced resolution speed hack": "향상된 해상도 속도 해킹",
+    "Aspect ratio": "종횡비",
+    "CPU overclock": "CPU 오버클럭",
+    "Force Neo Geo mode": "포스 네오지오 모드",
+    "Diagnostic Input": "진단 입력",
+    "download": "다운로드",
+    "keep in browser": "브라우저에 보관",
+    "Webassembly support is not detected in this browser": "이 브라우저에서는 웹어셈블리 지원이 감지되지 않습니다.",
+    "Please upgrade your browser to the latest version": "브라우저를 최신 버전으로 업그레이드하십시오.",
+    "Missing mame config": "mame 구성이 누락되었습니다.",
+    "Stop Screen Recording": "화면 녹화 중지",
+    "Start Screen Recording": "화면 녹화 시작",
+    "Take Screenshot": "스크린샷 찍기",
+    "Quick Save": "빠른 저장",
+    "Quick Load": "빠른 로드"
 }
